更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -25,43 +25,29 @@ CONFIG_ZLIB_OPTIMIZE_SPEED=y
 CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld;llvm-objcopy;llvm-objdump;llvm-ar;llvm-nm"
 
 # ======================
-# 安全增强特性
-# ======================
-CONFIG_STRICT_KERNEL_RWX=y
-CONFIG_HARDENED_USERCOPY=y
-CONFIG_INIT_STACK_ALL_ZERO=y
-CONFIG_STACKPROTECTOR_STRONG=y
-CONFIG_RANDOMIZE_KSTACK_OFFSET=y
-CONFIG_STATIC_USERMODEHELPER=y
-CONFIG_RANDOMIZE_BASE=y
-
-# ======================
 # 硬件特定优化 (Intel J4125)
 # ======================
 CONFIG_PREEMPT=y
-CONFIG_PREEMPT_DYNAMIC=y
 CONFIG_HIGH_RES_TIMERS=y
-CONFIG_SCHED_HRTICK=y
-CONFIG_RCU_BOOST=y
-CONFIG_MIGRATION=y
 CONFIG_SOFTIRQ_ON_OWN_STACK=y
-CONFIG_HZ=1000
-
-# --- CPU频率管理 (针对Intel x86优化) ---
+CONFIG_MIGRATION=y
+CONFIG_HZ=1000                    
 CONFIG_INTEL_PSTATE=y
 CONFIG_INTEL_PSTATE_HWP=y
-CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
-CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
-CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_INTEL_IDLE=y
 CONFIG_INTEL_EPB=y
 CONFIG_CRYPTO_AES_NI_INTEL=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
+CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
+CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
+CONFIG_PREEMPT_DYNAMIC=n
+CONFIG_SCHED_HRTICK=n
+CONFIG_RCU_BOOST=n
+
 
 # ======================
 # 内存管理优化 (8GB专用)
 # ======================
-CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
 CONFIG_LRU_GEN=y
 CONFIG_LRU_GEN_ENABLED=y
 CONFIG_LRU_GEN_WALKS_MMU=y
@@ -69,36 +55,28 @@ CONFIG_COMPACTION=y
 CONFIG_SLUB=y
 CONFIG_SLUB_CPU_PARTIAL=y
 CONFIG_PAGE_POOL=y
+CONFIG_TRANSPARENT_HUGEPAGE_NEVER=n
 
 # ======================
 # 网络协议栈优化 (精简版)
 # ======================
-# 核心协议特性
-CONFIG_TCP_NO_TSQ=y
-CONFIG_TCP_CONG_BBR3=y
-CONFIG_TCP_CONG_ADVANCED=y
-CONFIG_TCP_ZERO_COPY_RECEIVE=y
-CONFIG_IP_ROUTE_MULTIPATH=y
-CONFIG_IPV6_ROUTER_PREF=y
-CONFIG_IP_MULTIPLE_TABLES=y
-CONFIG_NET_DEVLINK=y
-CONFIG_IP_TUNNEL=y
-CONFIG_NET_NS=y
-CONFIG_NET_SCH_DEFAULT=y
-CONFIG_DEFAULT_FQ_CODEL=y
-
+CONFIG_TCP_NO_TSQ=y  
+CONFIG_TCP_CONG_BBR3=y  
+CONFIG_IP_ROUTE_MULTIPATH=y  
+CONFIG_IP_MULTIPLE_TABLES=y  
+CONFIG_IPV6_ROUTER_PREF=y  
+CONFIG_IP_TUNNEL=y  
+CONFIG_NET_SCH_DEFAULT=y  
+CONFIG_DEFAULT_FQ_CODEL=y  
 
 # ======================
 # Netfilter与NAT加速配置 (nftables 优化版)
 # ======================
-
-# --- 核心基础 (必须启用) ---
 CONFIG_NETFILTER=y
 CONFIG_NETFILTER_ADVANCED=y
 CONFIG_NF_CONNTRACK=y
 CONFIG_NF_CONNTRACK_IPV4=y
 CONFIG_NF_CONNTRACK_IPV6=y
-CONFIG_NF_CONNTRACK_PROCFS=y
 CONFIG_NF_DEFRAG_IPV4=y
 CONFIG_NF_DEFRAG_IPV6=y
 CONFIG_NF_NAT=y
@@ -106,75 +84,68 @@ CONFIG_NF_NAT_IPV4=y
 CONFIG_NF_NAT_IPV6=y
 CONFIG_NF_NAT_MASQUERADE_IPV4=y
 CONFIG_NF_NAT_MASQUERADE_IPV6=y
-CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
-CONFIG_NETFILTER_XT_MATCH_STATE=y
+CONFIG_NF_NAT_FULLCONE=y          
 CONFIG_NF_TABLES=y
 CONFIG_NF_TABLES_SET=y
-CONFIG_NF_TABLES_INET=y
+CONFIG_NF_TABLES_INET=y          
 CONFIG_NF_TABLES_IPV4=y
 CONFIG_NF_TABLES_IPV6=y
-CONFIG_NF_TABLES_NETDEV=y
-CONFIG_NFT_COUNTER=y
-CONFIG_NFT_CT=y
-CONFIG_NFT_NAT=y
-CONFIG_NFT_MASQ=y
-CONFIG_NFT_REDIR=y
-CONFIG_NFT_QUEUE=y
-CONFIG_NFT_LIMIT=y
-CONFIG_NFT_LOG=y
-CONFIG_NFT_REJECT=y
-CONFIG_NFT_REJECT_INET=y
-CONFIG_NFT_CONNLIMIT=y
-CONFIG_NFT_SYNPROXY=y
-CONFIG_NF_NAT_FULLCONE=y
-CONFIG_NETFILTER_FLOW_OFFLOAD=y
-CONFIG_NETFILTER_XT_TARGET_FLOWOFFLOAD=y CONFIG_NETFILTER_XT_TARGET_HARDWARE_OFFLOAD=y
+CONFIG_NF_TABLES_NETDEV=y     
+CONFIG_NFT_NAT=y                 
+CONFIG_NFT_MASQ=y                
+CONFIG_NFT_REDIR=y               
+CONFIG_NFT_REJECT=y              
+CONFIG_NFT_REJECT_INET=y         
+CONFIG_NETFILTER_FLOW_OFFLOAD=y          
+CONFIG_NETFILTER_XT_TARGET_FLOWOFFLOAD=y CONFIG_NETFILTER_XT_TARGET_HARDWARE_OFFLOAD=y 
+CONFIG_NFT_SYNPROXY=y           
+CONFIG_NF_CONNTRACK_PROCFS=n    
 
 # ======================
 # 网卡驱动优化 (Intel I226)
 # ======================
-CONFIG_IGC=y                    
-CONFIG_IGC_DIM=y               
-CONFIG_IGC_VLAN_STRIPPING=y    
-CONFIG_IGC_RX_NAPI=y           
-CONFIG_IGC_TX_NAPI=y           
-CONFIG_IGC_GSO=y               
-CONFIG_IGC_GRO=y               
-CONFIG_IGC_TSO=y               
+CONFIG_IGC=y
+CONFIG_IGC_RX_NAPI=y
+CONFIG_IGC_TX_NAPI=y
+CONFIG_IGC_GRO=y
+CONFIG_IGC_GSO=y
+CONFIG_IGC_TSO=y
+CONFIG_IGC_DIM=y             
+CONFIG_IGC_VLAN_STRIPPING=y     
 
 # ======================
 # 中断与队列优化
 # ======================
-CONFIG_PCI_MSI=y               
-CONFIG_PCI_MSI_IRQ_DOMAIN=y    
-CONFIG_IRQ_AFFINITY_HINT=y     
-CONFIG_XPS=y                   
-CONFIG_RPS=y                   
-CONFIG_RFS_ACCEL=y             
+CONFIG_PCI_MSI=y
+CONFIG_PCI_MSI_IRQ_DOMAIN=y
+CONFIG_IRQ_AFFINITY_HINT=y
 CONFIG_GENERIC_IRQ_IPI=y
 CONFIG_IRQ_DOMAIN_HIERARCHY=y
 CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
+CONFIG_XPS=y
+CONFIG_RPS=y
+CONFIG_RFS_ACCEL=y
+CONFIG_AUTO_IRQ_AFFINITY=n  
 
 # ======================
 # 内核模块与流表加速 (适配nftables/firewall4 - 优化版)
 # ======================
-CONFIG_PACKAGE_kmod-sched-core=y 
+# 核心模块全启用
+CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-sched-bpf=y
-CONFIG_PACKAGE_kmod-sched-fq=y   
-CONFIG_PACKAGE_kmod-sched-connmark=y 
-CONFIG_PACKAGE_kmod-ifb=y          
-CONFIG_PACKAGE_kmod-tcp-bbr=y     
-CONFIG_PACKAGE_kmod-nft-core=y    
-CONFIG_PACKAGE_kmod-nft-nat=y     
+CONFIG_PACKAGE_kmod-sched-connmark=y
+CONFIG_PACKAGE_kmod-ifb=y
+CONFIG_PACKAGE_kmod-nft-core=y
+CONFIG_PACKAGE_kmod-nft-nat=y
 CONFIG_PACKAGE_kmod-nft-netdev=y
-CONFIG_PACKAGE_kmod-nft-offload=y    
+CONFIG_PACKAGE_kmod-nft-offload=y
+CONFIG_PACKAGE_kmod-nf-conntrack=y
+CONFIG_PACKAGE_kmod-nf-conntrack6=y
+CONFIG_PACKAGE_kmod-nf-nat=y
+CONFIG_PACKAGE_kmod-nf-nat6=y
+CONFIG_PACKAGE_kmod-nf-flow=y
+CONFIG_PACKAGE_kmod-nf-reject=y
 CONFIG_PACKAGE_kmod-nft-fullcone=y
-CONFIG_PACKAGE_kmod-nf-flow=y        
-CONFIG_PACKAGE_kmod-nf-reject=y     
-CONFIG_PACKAGE_kmod-nf-conntrack=y  
-CONFIG_PACKAGE_kmod-nf-conntrack6=y 
-CONFIG_PACKAGE_kmod-nf-nat=y        
-CONFIG_PACKAGE_kmod-nf-nat6=y       
 
 # ======================
 # 用户态工具与库 (nftables专用 - 优化版)
