更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -51,7 +51,7 @@ CONFIG_RCU_BOOST=n
 CONFIG_LRU_GEN=y
 CONFIG_LRU_GEN_ENABLED=y
 CONFIG_LRU_GEN_WALKS_MMU=y
-CONFIG_COMPACTION=y
+CONFIG_COMPACTION=n
 CONFIG_SLUB=y
 CONFIG_SLUB_CPU_PARTIAL=y
 CONFIG_PAGE_POOL=y
@@ -125,7 +125,7 @@ CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
 CONFIG_XPS=y
 CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
-CONFIG_AUTO_IRQ_AFFINITY=n  
+CONFIG_AUTO_IRQ_AFFINITY=n
 
 # ======================
 # 内核模块与流表加速 (适配nftables/firewall4 - 优化版)
