--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -84,7 +84,7 @@ CONFIG_NF_NAT_IPV4=y
 CONFIG_NF_NAT_IPV6=y
 CONFIG_NF_NAT_MASQUERADE_IPV4=y
 CONFIG_NF_NAT_MASQUERADE_IPV6=y
-CONFIG_NF_NAT_FULLCONE=y          
+CONFIG_NF_NAT_FULLCONE=y         
 CONFIG_NF_TABLES=y
 CONFIG_NF_TABLES_SET=y
 CONFIG_NF_TABLES_INET=y          
@@ -97,24 +97,29 @@ CONFIG_NFT_REDIR=y
 CONFIG_NFT_REJECT=y              
 CONFIG_NFT_REJECT_INET=y         
 CONFIG_NETFILTER_FLOW_OFFLOAD=y          
-CONFIG_NETFILTER_XT_TARGET_FLOWOFFLOAD=y CONFIG_NETFILTER_XT_TARGET_HARDWARE_OFFLOAD=y 
+CONFIG_NETFILTER_XT_TARGET_FLOWOFFLOAD=y  CONFIG_NETFILTER_XT_TARGET_HARDWARE_OFFLOAD=y 
 CONFIG_NFT_SYNPROXY=y           
 CONFIG_NF_CONNTRACK_PROCFS=n    
+CONFIG_NF_FLOW_TABLE=y           
+CONFIG_NF_FLOW_TABLE_HW=y        
+CONFIG_NF_CT_NETLINK=y           
+CONFIG_NF_FLOW=y     
+CONFIG_NFT_FLOW_OFFLOAD=y 
 
 # ======================
-# 网卡驱动优化 (Intel I226)
+# 网卡驱动优化 (Intel I226) - 保持良好配置
 # ======================
 CONFIG_IGC=y
 CONFIG_IGC_RX_NAPI=y
 CONFIG_IGC_TX_NAPI=y
-CONFIG_IGC_GRO=y
-CONFIG_IGC_GSO=y
-CONFIG_IGC_TSO=y
-CONFIG_IGC_DIM=y             
-CONFIG_IGC_VLAN_STRIPPING=y     
+CONFIG_IGC_GRO=y                 
+CONFIG_IGC_GSO=y                 
+CONFIG_IGC_TSO=y                 
+CONFIG_IGC_DIM=y                 
+CONFIG_IGC_VLAN_STRIPPING=y      
 
 # ======================
-# 中断与队列优化
+# 中断与队列优化 - 保持良好配置
 # ======================
 CONFIG_PCI_MSI=y
 CONFIG_PCI_MSI_IRQ_DOMAIN=y
@@ -122,15 +127,14 @@ CONFIG_IRQ_AFFINITY_HINT=y
 CONFIG_GENERIC_IRQ_IPI=y
 CONFIG_IRQ_DOMAIN_HIERARCHY=y
 CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
-CONFIG_XPS=y
-CONFIG_RPS=y
-CONFIG_RFS_ACCEL=y
-CONFIG_AUTO_IRQ_AFFINITY=n
+CONFIG_XPS=y                     
+CONFIG_RPS=y                     
+CONFIG_RFS_ACCEL=y               
+CONFIG_AUTO_IRQ_AFFINITY=n       
 
 # ======================
 # 内核模块与流表加速 (适配nftables/firewall4 - 优化版)
 # ======================
-# 核心模块全启用
 CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-sched-bpf=y
 CONFIG_PACKAGE_kmod-sched-connmark=y
@@ -138,14 +142,20 @@ CONFIG_PACKAGE_kmod-ifb=y
 CONFIG_PACKAGE_kmod-nft-core=y
 CONFIG_PACKAGE_kmod-nft-nat=y
 CONFIG_PACKAGE_kmod-nft-netdev=y
-CONFIG_PACKAGE_kmod-nft-offload=y
+CONFIG_PACKAGE_kmod-nft-offload=y    
 CONFIG_PACKAGE_kmod-nf-conntrack=y
 CONFIG_PACKAGE_kmod-nf-conntrack6=y
 CONFIG_PACKAGE_kmod-nf-nat=y
 CONFIG_PACKAGE_kmod-nf-nat6=y
-CONFIG_PACKAGE_kmod-nf-flow=y
+CONFIG_PACKAGE_kmod-nf-flow=y        
 CONFIG_PACKAGE_kmod-nf-reject=y
-CONFIG_PACKAGE_kmod-nft-fullcone=y
+CONFIG_PACKAGE_kmod-nft-fullcone=y   
+CONFIG_PACKAGE_kmod-nft-flow-offload=y  
+CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
+CONFIG_PACKAGE_firewall4=y            
+CONFIG_PACKAGE_uci-firewall=y         
+CONFIG_KERNEL_DEBUG_INFO=n            
+CONFIG_KERNEL_DEBUG_KERNEL=n          
 
 # ======================
 # 用户态工具与库 (nftables专用 - 优化版)
