--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -44,7 +44,6 @@ CONFIG_PREEMPT_DYNAMIC=n
 CONFIG_SCHED_HRTICK=n
 CONFIG_RCU_BOOST=n
 
-
 # ======================
 # 内存管理优化 (8GB专用)
 # ======================
@@ -108,7 +107,7 @@ CONFIG_NF_FLOW=y
 CONFIG_NFT_FLOW_OFFLOAD=y 
 
 # ======================
-# 网卡驱动优化 (Intel I226) - 保持良好配置
+# 网卡驱动与中断优化 (Intel I226)
 # ======================
 CONFIG_IGC=y
 CONFIG_IGC_RX_NAPI=y
@@ -118,10 +117,6 @@ CONFIG_IGC_GSO=y
 CONFIG_IGC_TSO=y                 
 CONFIG_IGC_DIM=y                 
 CONFIG_IGC_VLAN_STRIPPING=y      
-
-# ======================
-# 中断与队列优化 - 保持良好配置
-# ======================
 CONFIG_PCI_MSI=y
 CONFIG_PCI_MSI_IRQ_DOMAIN=y
 CONFIG_IRQ_AFFINITY_HINT=y
@@ -134,7 +129,7 @@ CONFIG_RFS_ACCEL=y
 CONFIG_AUTO_IRQ_AFFINITY=n       
 
 # ======================
-# 内核模块与流表加速 (适配nftables/firewall4 - 优化版)
+# 内核模块与流表加速 (适配nftables/firewall4)
 # ======================
 CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-sched-bpf=y
@@ -159,7 +154,7 @@ CONFIG_KERNEL_DEBUG_INFO=n
 CONFIG_KERNEL_DEBUG_KERNEL=n          
 
 # ======================
-# 用户态工具与库 (nftables专用 - 优化版)
+# 用户态工具与库 (nftables专用)
 # ======================
 CONFIG_PACKAGE_nftables-json=y  
 CONFIG_PACKAGE_libnftnl=y       
@@ -168,7 +163,7 @@ CONFIG_PACKAGE_ip-full=y
 CONFIG_PACKAGE_ethtool=y        
 CONFIG_PACKAGE_irqbalance=y     
 CONFIG_PACKAGE_iperf3=y          
-      
+
 # ======================
 # LuCI应用配置
 # ======================
@@ -177,7 +172,3 @@ CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-filemanager=y
 CONFIG_PACKAGE_luci-app-irqbalance=y
 CONFIG_PACKAGE_luci-app-firewall=y
-
-
-
-
