更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -27,7 +27,7 @@ CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld;llvm-objcopy;llvm-objdump;llvm-ar
 # ======================
 # 硬件特定优化 (Intel J4125)
 # ======================
-CONFIG_PREEMPT=y
+CONFIG_PREEMPT=n
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_SOFTIRQ_ON_OWN_STACK=y
 CONFIG_MIGRATION=y
