--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -1,5 +1,5 @@
 # ======================
-# 基础架构与固件配置
+# 基础架构与固件配置 (优化分区布局)
 # ======================
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
@@ -11,7 +11,7 @@ CONFIG_TARGET_IMAGES_GZIP=y
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
 
 # ======================
-# 工具链与编译优化
+# 工具链与编译优化 (强化LTO)
 # ======================
 CONFIG_KERNEL_CLANG_LLVM=y
 CONFIG_LLVM_TARGET_ARCH="x86-64-v2"
@@ -22,6 +22,7 @@ CONFIG_KERNEL_OPTIMIZE_O3=y
 CONFIG_OPTIMIZE_INLINING=y
 CONFIG_ZLIB_OPTIMIZE_SPEED=y
 CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld;llvm-objcopy;llvm-objdump;llvm-ar;llvm-nm"
+CONFIG_LTO_CLANG_FULL=y
 
 # ======================
 # 硬件特定优化 (Intel J4125)
@@ -38,6 +39,8 @@ CONFIG_CRYPTO_AES_NI_INTEL=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
+CONFIG_X86_INTEL_CACHE_QOS=y
+CONFIG_INTEL_RDT=y
 
 # ======================
 # 内存管理优化 (8GB专用)
@@ -48,21 +51,27 @@ CONFIG_LRU_GEN_WALKS_MMU=y
 CONFIG_SLUB=y
 CONFIG_SLUB_CPU_PARTIAL=y
 CONFIG_PAGE_POOL=y
+CONFIG_TRANSPARENT_HUGEPAGE=y
+CONFIG_TRANSPARENT_HUGEPAGE_ALWAYS=y
 
 # ======================
-# 网络协议栈优化 (精简版)
+# 网络协议栈优化 (强化BBR和拥塞控制)
 # ======================
 CONFIG_TCP_NO_TSQ=y
 CONFIG_TCP_CONG_BBR3=y
+CONFIG_MPTCP=y
+CONFIG_MPTCP_IPV6=y
 CONFIG_IP_ROUTE_MULTIPATH=y
 CONFIG_IP_MULTIPLE_TABLES=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_IP_TUNNEL=y
 CONFIG_NET_SCH_DEFAULT=y
 CONFIG_DEFAULT_FQ_CODEL=y
+CONFIG_TCP_FASTOPEN=y
+CONFIG_TCP_FASTOPEN_KEY=y
 
 # ======================
-# Netfilter与NAT加速配置 (nftables 优化版)
+# Netfilter与NAT加速配置 (强化流表卸载)
 # ======================
 CONFIG_NETFILTER=y
 CONFIG_NETFILTER_ADVANCED=y
@@ -97,9 +106,10 @@ CONFIG_NF_FLOW_TABLE_HW=y
 CONFIG_NF_CT_NETLINK=y
 CONFIG_NF_FLOW=y
 CONFIG_NFT_FLOW_OFFLOAD=y
+CONFIG_NF_CONNTRACK_EVENTS=y
 
 # ======================
-# 网卡驱动与中断优化 (Intel I226)
+# 网卡驱动与中断优化 (Intel I226强化)
 # ======================
 CONFIG_IGC=y
 CONFIG_IGC_RX_NAPI=y
@@ -109,6 +119,7 @@ CONFIG_IGC_GSO=y
 CONFIG_IGC_TSO=y
 CONFIG_IGC_DIM=y
 CONFIG_IGC_VLAN_STRIPPING=y
+CONFIG_IGC_MULTIQUEUE=y
 CONFIG_PCI_MSI=y
 CONFIG_PCI_MSI_IRQ_DOMAIN=y
 CONFIG_IRQ_AFFINITY_HINT=y
@@ -118,12 +129,13 @@ CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
 CONFIG_XPS=y
 CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
+CONFIG_NET_RX_BUSY_POLL=y
+CONFIG_IRQ_TIME_ACCOUNTING=y
 
 # ======================
-# 内核模块与流表加速 (适配nftables/firewall4)
+# 内核模块与流表加速 (新增SFE加速)
 # ======================
 CONFIG_PACKAGE_kmod-sched-core=y
-CONFIG_PACKAGE_kmod-sched-bpf=y
 CONFIG_PACKAGE_kmod-sched-connmark=y
 CONFIG_PACKAGE_kmod-ifb=y
 CONFIG_PACKAGE_kmod-nft-core=y
@@ -139,11 +151,12 @@ CONFIG_PACKAGE_kmod-nf-reject=y
 CONFIG_PACKAGE_kmod-nft-fullcone=y
 CONFIG_PACKAGE_kmod-nft-flow-offload=y
 CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
+CONFIG_PACKAGE_kmod-fast-classifier=y
 CONFIG_PACKAGE_firewall4=y
 CONFIG_PACKAGE_uci-firewall=y
 
 # ======================
-# 用户态工具与库 (nftables专用)
+# 用户态工具与库 (新增诊断工具)
 # ======================
 CONFIG_PACKAGE_nftables-json=y
 CONFIG_PACKAGE_libnftnl=y
@@ -154,10 +167,11 @@ CONFIG_PACKAGE_irqbalance=y
 CONFIG_PACKAGE_iperf3=y
 
 # ======================
-# LuCI应用配置
+# LuCI应用配置 (新增流量监控)
 # ======================
 CONFIG_PACKAGE_luci-app-arpbind=y
 CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-filemanager=y
 CONFIG_PACKAGE_luci-app-irqbalance=y
 CONFIG_PACKAGE_luci-app-firewall=y
+
