更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -16,7 +16,8 @@ CONFIG_TARGET_ROOTFS_SQUASHFS=y
 CONFIG_KERNEL_CLANG_LLVM=y
 CONFIG_LLVM_TARGET_ARCH="x86-64-v2"
 CONFIG_USE_LLD=y
-CONFIG_LTO_CLANG_THIN=y
+CONFIG_LTO_CLANG_THIN=n
+CONFIG_LTO_CLANG_FULL=y
 CONFIG_KERNEL_LTO=y
 CONFIG_KERNEL_OPTIMIZE_O3=y
 CONFIG_OPTIMIZE_INLINING=y
@@ -29,7 +30,7 @@ CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld;llvm-objcopy;llvm-objdump;llvm-ar
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_SOFTIRQ_ON_OWN_STACK=y
 CONFIG_MIGRATION=y
-CONFIG_HZ=1000
+CONFIG_HZ=500
 CONFIG_INTEL_PSTATE=y
 CONFIG_INTEL_PSTATE_HWP=y
 CONFIG_INTEL_IDLE=y
