--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -16,8 +16,7 @@ CONFIG_TARGET_ROOTFS_SQUASHFS=y
 CONFIG_KERNEL_CLANG_LLVM=y
 CONFIG_LLVM_TARGET_ARCH="x86-64-v2"
 CONFIG_USE_LLD=y
-CONFIG_LTO_CLANG_THIN=n
-CONFIG_LTO_CLANG_FULL=y
+CONFIG_LTO_CLANG_THIN=y
 CONFIG_KERNEL_LTO=y
 CONFIG_KERNEL_OPTIMIZE_O3=y
 CONFIG_OPTIMIZE_INLINING=y
@@ -51,8 +50,6 @@ CONFIG_LRU_GEN_WALKS_MMU=y
 CONFIG_SLUB=y
 CONFIG_SLUB_CPU_PARTIAL=y
 CONFIG_PAGE_POOL=y
-CONFIG_TRANSPARENT_HUGEPAGE=y
-CONFIG_TRANSPARENT_HUGEPAGE_ALWAYS=y
 
 # ======================
 # 网络协议栈优化 (强化BBR和拥塞控制)
@@ -135,6 +132,15 @@ CONFIG_IRQ_TIME_ACCOUNTING=y
 # ======================
 # 内核模块与流表加速 (新增SFE加速)
 # ======================
+CONFIG_ALL_KMODS=y
+CONFIG_PACKAGE_kmod-br-netfilter=y
+CONFIG_PACKAGE_kmod-hwmon-pwmfan=y
+CONFIG_PACKAGE_kmod-nf-socket=y
+CONFIG_PACKAGE_kmod-sched-bpf=y
+CONFIG_PACKAGE_kmod-sched-cake=y
+CONFIG_PACKAGE_kmod-sched=y
+CONFIG_PACKAGE_kmod-tcp-bbr3=y
+CONFIG_PACKAGE_kmod-xdp-sockets-diag=y
 CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-sched-connmark=y
 CONFIG_PACKAGE_kmod-ifb=y
@@ -151,8 +157,7 @@ CONFIG_PACKAGE_kmod-nf-reject=y
 CONFIG_PACKAGE_kmod-nft-fullcone=y
 CONFIG_PACKAGE_kmod-nft-flow-offload=y
 CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
-CONFIG_PACKAGE_firewall4=y
-CONFIG_PACKAGE_uci-firewall=y
+
 
 # ======================
 # 用户态工具与库 (新增诊断工具)
@@ -164,6 +169,7 @@ CONFIG_PACKAGE_ip-full=y
 CONFIG_PACKAGE_ethtool=y
 CONFIG_PACKAGE_irqbalance=y
 CONFIG_PACKAGE_iperf3=y
+CONFIG_PACKAGE_natflow=m
 
 # ======================
 # LuCI应用配置 (新增流量监控)
