--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -170,7 +170,7 @@ CONFIG_PACKAGE_ethtool=y
 CONFIG_PACKAGE_irqbalance=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_natflow=m
-
+CONFIG_PACKAGE_ubootenv-nvram
 # ======================
 # LuCI应用配置 (新增流量监控)
 # ======================
