更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -18,6 +18,7 @@ CONFIG_LLVM_TARGET_ARCH="x86-64-v2"
 CONFIG_USE_LLD=y
 CONFIG_LTO_CLANG_THIN=y
 CONFIG_KERNEL_LTO=y
+CONFIG_KERNEL_PGO=y
 CONFIG_KERNEL_OPTIMIZE_O3=y
 CONFIG_OPTIMIZE_INLINING=y
 CONFIG_ZLIB_OPTIMIZE_SPEED=y
@@ -50,6 +51,8 @@ CONFIG_LRU_GEN_WALKS_MMU=y
 CONFIG_SLUB=y
 CONFIG_SLUB_CPU_PARTIAL=y
 CONFIG_PAGE_POOL=y
+CONFIG_TRANSPARENT_HUGEPAGE=y
+CONFIG_TRANSPARENT_HUGEPAGE_ALWAYS=y
 
 # ======================
 # 网络协议栈优化 (强化BBR和拥塞控制)
@@ -66,6 +69,8 @@ CONFIG_NET_SCH_DEFAULT=y
 CONFIG_DEFAULT_FQ_CODEL=y
 CONFIG_TCP_FASTOPEN=y
 CONFIG_TCP_FASTOPEN_KEY=y
+CONFIG_NET_TEAM=y
+CONFIG_NET_TEAM_MODE_LOADBALANCE=y
 
 # ======================
 # Netfilter与NAT加速配置 (强化流表卸载)
@@ -132,7 +137,6 @@ CONFIG_IRQ_TIME_ACCOUNTING=y
 # ======================
 # 内核模块与流表加速 (新增SFE加速)
 # ======================
-CONFIG_ALL_KMODS=y
 CONFIG_PACKAGE_kmod-br-netfilter=y
 CONFIG_PACKAGE_kmod-hwmon-pwmfan=y
 CONFIG_PACKAGE_kmod-nf-socket=y
@@ -157,7 +161,6 @@ CONFIG_PACKAGE_kmod-nf-reject=y
 CONFIG_PACKAGE_kmod-nft-fullcone=y
 CONFIG_PACKAGE_kmod-nft-flow-offload=y
 CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
-CONFIG_PACKAGE_kmod-ubootenv-nvram=n
 
 # ======================
 # 用户态工具与库 (新增诊断工具)
