--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -30,7 +30,7 @@ CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld;llvm-objcopy;llvm-objdump;llvm-ar
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_SOFTIRQ_ON_OWN_STACK=y
 CONFIG_MIGRATION=y
-CONFIG_HZ=500
+CONFIG_HZ=1000
 CONFIG_INTEL_PSTATE=y
 CONFIG_INTEL_PSTATE_HWP=y
 CONFIG_INTEL_IDLE=y
@@ -51,26 +51,17 @@ CONFIG_LRU_GEN_WALKS_MMU=y
 CONFIG_SLUB=y
 CONFIG_SLUB_CPU_PARTIAL=y
 CONFIG_PAGE_POOL=y
-CONFIG_TRANSPARENT_HUGEPAGE=y
-CONFIG_TRANSPARENT_HUGEPAGE_ALWAYS=y
 
 # ======================
 # 网络协议栈优化 (强化BBR和拥塞控制)
 # ======================
-CONFIG_TCP_NO_TSQ=y
+CONFIG_TCP_NO_TSQ=n
 CONFIG_TCP_CONG_BBR3=y
-CONFIG_MPTCP=y
-CONFIG_MPTCP_IPV6=y
-CONFIG_IP_ROUTE_MULTIPATH=y
-CONFIG_IP_MULTIPLE_TABLES=y
 CONFIG_IPV6_ROUTER_PREF=y
-CONFIG_IP_TUNNEL=y
 CONFIG_NET_SCH_DEFAULT=y
 CONFIG_DEFAULT_FQ_CODEL=y
 CONFIG_TCP_FASTOPEN=y
 CONFIG_TCP_FASTOPEN_KEY=y
-CONFIG_NET_TEAM=y
-CONFIG_NET_TEAM_MODE_LOADBALANCE=y
 
 # ======================
 # Netfilter与NAT加速配置 (强化流表卸载)
@@ -108,7 +99,7 @@ CONFIG_NF_FLOW_TABLE_HW=y
 CONFIG_NF_CT_NETLINK=y
 CONFIG_NF_FLOW=y
 CONFIG_NFT_FLOW_OFFLOAD=y
-CONFIG_NF_CONNTRACK_EVENTS=y
+CONFIG_NF_CONNTRACK_EVENTS=n
 
 # ======================
 # 网卡驱动与中断优化 (Intel I226强化)
@@ -131,15 +122,13 @@ CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
 CONFIG_XPS=y
 CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
-CONFIG_NET_RX_BUSY_POLL=y
-CONFIG_IRQ_TIME_ACCOUNTING=y
+CONFIG_NET_RX_BUSY_POLL=n
+CONFIG_IRQ_TIME_ACCOUNTING=n
 
 # ======================
 # 内核模块与流表加速 (新增SFE加速)
 # ======================
 CONFIG_PACKAGE_kmod-br-netfilter=y
-CONFIG_PACKAGE_kmod-hwmon-pwmfan=y
-CONFIG_PACKAGE_kmod-nf-socket=y
 CONFIG_PACKAGE_kmod-sched-bpf=y
 CONFIG_PACKAGE_kmod-sched-cake=y
 CONFIG_PACKAGE_kmod-sched=y
@@ -164,9 +153,7 @@ CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
 # ======================
 # 用户态工具与库 (新增诊断工具)
 # ======================
-CONFIG_PACKAGE_nftables-json=y
 CONFIG_PACKAGE_libnftnl=y
-CONFIG_PACKAGE_jansson=y
 CONFIG_PACKAGE_ip-full=y
 CONFIG_PACKAGE_ethtool=y
 CONFIG_PACKAGE_irqbalance=y
