更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -62,6 +62,11 @@ CONFIG_NET_SCH_DEFAULT=y
 CONFIG_DEFAULT_FQ_CODEL=y
 CONFIG_TCP_FASTOPEN=y
 CONFIG_TCP_FASTOPEN_KEY=y
+CONFIG_BPF=y
+CONFIG_BPF_JIT=y
+CONFIG_BPF_JIT_DEFAULT_ON=y
+CONFIG_BPF_SYSCALL=y
+CONFIG_BPF_UNPRIV_DEFAULT_OFF=y
 
 # ======================
 # Netfilter与NAT加速配置 (强化流表卸载)
