--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -67,6 +67,7 @@ CONFIG_BPF_JIT=y
 CONFIG_BPF_JIT_DEFAULT_ON=y
 CONFIG_BPF_SYSCALL=y
 CONFIG_BPF_UNPRIV_DEFAULT_OFF=y
+CONFIG_NETFILTER_XT_MATCH_BPF=y
 
 # ======================
 # Netfilter与NAT加速配置 (强化流表卸载)
@@ -154,6 +155,7 @@ CONFIG_PACKAGE_kmod-nf-reject=y
 CONFIG_PACKAGE_kmod-nft-fullcone=y
 CONFIG_PACKAGE_kmod-nft-flow-offload=y
 CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
+CONFIG_PACKAGE_kmod-ipt-bpf=y
 
 # ======================
 # 用户态工具与库 (新增诊断工具)
@@ -163,6 +165,7 @@ CONFIG_PACKAGE_ip-full=y
 CONFIG_PACKAGE_ethtool=y
 CONFIG_PACKAGE_irqbalance=y
 CONFIG_PACKAGE_iperf3=y
+CONFIG_PACKAGE_iptables-mod-bpf=y
 
 # ======================
 # LuCI应用配置 (新增流量监控)
