--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -67,7 +67,6 @@ CONFIG_BPF_JIT=y
 CONFIG_BPF_JIT_DEFAULT_ON=y
 CONFIG_BPF_SYSCALL=y
 CONFIG_BPF_UNPRIV_DEFAULT_OFF=y
-CONFIG_NETFILTER_XT_MATCH_BPF=y
 
 # ======================
 # Netfilter与NAT加速配置 (强化流表卸载)
@@ -132,7 +131,7 @@ CONFIG_NET_RX_BUSY_POLL=n
 CONFIG_IRQ_TIME_ACCOUNTING=n
 
 # ======================
-# 内核模块与流表加速 (新增SFE加速)
+# 内核模块与流表加速 
 # ======================
 CONFIG_PACKAGE_kmod-br-netfilter=y
 CONFIG_PACKAGE_kmod-sched-bpf=y
@@ -155,7 +154,6 @@ CONFIG_PACKAGE_kmod-nf-reject=y
 CONFIG_PACKAGE_kmod-nft-fullcone=y
 CONFIG_PACKAGE_kmod-nft-flow-offload=y
 CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
-CONFIG_PACKAGE_kmod-ipt-bpf=y
 
 # ======================
 # 用户态工具与库 (新增诊断工具)
@@ -165,7 +163,6 @@ CONFIG_PACKAGE_ip-full=y
 CONFIG_PACKAGE_ethtool=y
 CONFIG_PACKAGE_irqbalance=y
 CONFIG_PACKAGE_iperf3=y
-CONFIG_PACKAGE_iptables-mod-bpf=y
 
 # ======================
 # LuCI应用配置 (新增流量监控)
