--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -67,6 +67,7 @@ CONFIG_BPF_JIT=y
 CONFIG_BPF_JIT_DEFAULT_ON=y
 CONFIG_BPF_SYSCALL=y
 CONFIG_BPF_UNPRIV_DEFAULT_OFF=y
+CONFIG_NETFILTER_XT_MATCH_BPF=y
 
 # ======================
 # Netfilter与NAT加速配置 (强化流表卸载)
