--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -1,5 +1,5 @@
 # ======================
-# 基础架构与固件配置 (优化分区布局)
+# 目标架构与固件配置
 # ======================
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
@@ -11,7 +11,7 @@ CONFIG_TARGET_IMAGES_GZIP=y
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
 
 # ======================
-# 工具链与编译优化 (强化LTO)
+# 工具链与编译优化
 # ======================
 CONFIG_KERNEL_CLANG_LLVM=y
 CONFIG_LLVM_TARGET_ARCH="x86-64-v2"
@@ -24,12 +24,23 @@ CONFIG_ZLIB_OPTIMIZE_SPEED=y
 CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld;llvm-objcopy;llvm-objdump;llvm-ar;llvm-nm"
 
 # ======================
-# 硬件特定优化 (Intel J4125)
+# x86架构特定配置
 # ======================
+CONFIG_64BIT=y
+CONFIG_X86_64=y
+CONFIG_RETPOLINE=y
+CONFIG_PCI=y
+CONFIG_PCI_MSI=y
+CONFIG_IOMMU_SUPPORT=y
 CONFIG_HIGH_RES_TIMERS=y
+CONFIG_PREEMPT_VOLUNTARY=y
 CONFIG_SOFTIRQ_ON_OWN_STACK=y
 CONFIG_MIGRATION=y
 CONFIG_HZ=1000
+
+# ======================
+# Intel硬件优化 (J4125 + I226)
+# ======================
 CONFIG_INTEL_PSTATE=y
 CONFIG_INTEL_PSTATE_HWP=y
 CONFIG_INTEL_IDLE=y
@@ -37,9 +48,29 @@ CONFIG_INTEL_EPB=y
 CONFIG_CRYPTO_AES_NI_INTEL=y
 CONFIG_X86_INTEL_CACHE_QOS=y
 CONFIG_INTEL_RDT=y
+CONFIG_IGC=y
+CONFIG_IGC_RX_NAPI=y
+CONFIG_IGC_TX_NAPI=y
+CONFIG_IGC_GRO=y
+CONFIG_IGC_GSO=y
+CONFIG_IGC_TSO=y
+CONFIG_IGC_DIM=y
+CONFIG_IGC_VLAN_STRIPPING=y
+CONFIG_IGC_MULTIQUEUE=y
+CONFIG_IGC_HWMON=y
+CONFIG_PCI_MSI_IRQ_DOMAIN=y
+CONFIG_IRQ_AFFINITY_HINT=y
+CONFIG_GENERIC_IRQ_IPI=y
+CONFIG_IRQ_DOMAIN_HIERARCHY=y
+CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
+CONFIG_XPS=y
+CONFIG_RPS=y
+CONFIG_RFS_ACCEL=y
+CONFIG_NET_RX_BUSY_POLL=n
+CONFIG_IRQ_TIME_ACCOUNTING=n
 
 # ======================
-# 内存管理优化 (8GB专用)
+# 内存管理优化
 # ======================
 CONFIG_LRU_GEN=y
 CONFIG_LRU_GEN_ENABLED=y
@@ -49,7 +80,7 @@ CONFIG_SLUB_CPU_PARTIAL=y
 CONFIG_PAGE_POOL=y
 
 # ======================
-# 网络协议栈优化 (强化BBR和拥塞控制)
+# 网络协议栈优化
 # ======================
 CONFIG_TCP_NO_TSQ=n
 CONFIG_TCP_CONG_BBR3=y
@@ -58,15 +89,35 @@ CONFIG_NET_SCH_DEFAULT=y
 CONFIG_DEFAULT_FQ_CODEL=y
 CONFIG_TCP_FASTOPEN=y
 CONFIG_TCP_FASTOPEN_KEY=y
-CONFIG_BPF=y
-CONFIG_BPF_JIT=y
-CONFIG_BPF_JIT_DEFAULT_ON=y
-CONFIG_BPF_SYSCALL=y
-CONFIG_BPF_UNPRIV_DEFAULT_OFF=y
-CONFIG_NETFILTER_XT_MATCH_BPF=y
+CONFIG_PACKET=y
+CONFIG_NET_INGRESS=y
+CONFIG_NET_EGRESS=y
+CONFIG_XFRM_OFFLOAD=y
 
 # ======================
-# Netfilter与NAT加速配置 (强化流表卸载)
+# BPF与XDP配置
+# ======================
+CONFIG_BPF=y
+CONFIG_BPF_SYSCALL=y
+CONFIG_BPF_JIT=y
+CONFIG_BPF_JIT_DEFAULT_ON=y
+CONFIG_BPF_JIT_ALWAYS_ON=y
+CONFIG_BPF_UNPRIV_DEFAULT_OFF=y
+CONFIG_BPF_STREAM_PARSER=y
+CONFIG_NET_CLS_BPF=m
+CONFIG_NET_ACT_BPF=m
+CONFIG_NETFILTER_XT_MATCH_BPF=y
+CONFIG_XDP_SOCKETS=y
+CONFIG_KERNEL_DEBUG_INFO_REDUCED=n
+CONFIG_KERNEL_DEBUG_INFO_BTF=y
+CONFIG_KERNEL_CGROUPS=y
+CONFIG_KERNEL_CGROUP_BPF=y
+CONFIG_BPF_TOOLCHAIN_HOST=y
+CONFIG_KERNEL_XDP_SOCKETS=y
+CONFIG_LWTUNNEL_BPF=y
+
+# ======================
+# Netfilter与NAT配置
 # ======================
 CONFIG_NETFILTER=y
 CONFIG_NETFILTER_ADVANCED=y
@@ -104,31 +155,7 @@ CONFIG_NFT_FLOW_OFFLOAD=y
 CONFIG_NF_CONNTRACK_EVENTS=n
 
 # ======================
-# 网卡驱动与中断优化 (Intel I226强化)
-# ======================
-CONFIG_IGC=y
-CONFIG_IGC_RX_NAPI=y
-CONFIG_IGC_TX_NAPI=y
-CONFIG_IGC_GRO=y
-CONFIG_IGC_GSO=y
-CONFIG_IGC_TSO=y
-CONFIG_IGC_DIM=y
-CONFIG_IGC_VLAN_STRIPPING=y
-CONFIG_IGC_MULTIQUEUE=y
-CONFIG_PCI_MSI=y
-CONFIG_PCI_MSI_IRQ_DOMAIN=y
-CONFIG_IRQ_AFFINITY_HINT=y
-CONFIG_GENERIC_IRQ_IPI=y
-CONFIG_IRQ_DOMAIN_HIERARCHY=y
-CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
-CONFIG_XPS=y
-CONFIG_RPS=y
-CONFIG_RFS_ACCEL=y
-CONFIG_NET_RX_BUSY_POLL=n
-CONFIG_IRQ_TIME_ACCOUNTING=n
-
-# ======================
-# 内核模块与流表加速 
+# 内核模块配置 (OpenWrt特有)
 # ======================
 CONFIG_PACKAGE_kmod-br-netfilter=y
 CONFIG_PACKAGE_kmod-sched-bpf=y
@@ -151,9 +178,10 @@ CONFIG_PACKAGE_kmod-nf-reject=y
 CONFIG_PACKAGE_kmod-nft-fullcone=y
 CONFIG_PACKAGE_kmod-nft-flow-offload=y
 CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
+CONFIG_PACKAGE_kmod-xdp-sockets-diag=y
 
 # ======================
-# 用户态工具与库 (新增诊断工具)
+# 用户态工具与库
 # ======================
 CONFIG_PACKAGE_libnftnl=y
 CONFIG_PACKAGE_ip-full=y
@@ -162,7 +190,7 @@ CONFIG_PACKAGE_irqbalance=y
 CONFIG_PACKAGE_iperf3=y
 
 # ======================
-# LuCI应用配置 (新增流量监控)
+# LuCI应用配置
 # ======================
 CONFIG_PACKAGE_luci-app-arpbind=y
 CONFIG_PACKAGE_luci-app-oaf=y
@@ -170,3 +198,21 @@ CONFIG_PACKAGE_luci-app-filemanager=y
 CONFIG_PACKAGE_luci-app-irqbalance=y
 CONFIG_PACKAGE_luci-app-firewall=y
 
+# ======================
+# 调试与追踪配置
+# ======================
+CONFIG_DEBUG_INFO_BTF=y
+CONFIG_DEBUG_INFO_DWARF4=y
+CONFIG_FTRACE=y
+CONFIG_KPROBES=y
+CONFIG_UPROBES=y
+CONFIG_TRACEPOINTS=y
+CONFIG_BPF_KPROBE_OVERRIDE=y
+CONFIG_BPF_LSM=y
+CONFIG_HAVE_EBPF_JIT=y
+
+# ======================
+# 虚拟网络配置
+# ======================
+CONFIG_VETH=m
+CONFIG_VIRTIO_NET=m
