--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -188,6 +188,7 @@ CONFIG_PACKAGE_ip-full=y
 CONFIG_PACKAGE_ethtool=y
 CONFIG_PACKAGE_irqbalance=y
 CONFIG_PACKAGE_iperf3=y
+CONFIG_PACKAGE_libxdp=y
 
 # ======================
 # LuCI应用配置
@@ -202,11 +203,6 @@ CONFIG_PACKAGE_luci-app-firewall=y
 # 调试与追踪配置
 # ======================
 CONFIG_DEBUG_INFO_BTF=y
-CONFIG_DEBUG_INFO_DWARF4=y
-CONFIG_FTRACE=y
-CONFIG_KPROBES=y
-CONFIG_UPROBES=y
-CONFIG_TRACEPOINTS=y
 CONFIG_BPF_KPROBE_OVERRIDE=y
 CONFIG_BPF_LSM=y
 CONFIG_HAVE_EBPF_JIT=y
