更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -33,10 +33,15 @@ CONFIG_PCI=y
 CONFIG_PCI_MSI=y
 CONFIG_IOMMU_SUPPORT=y
 CONFIG_HIGH_RES_TIMERS=y
-CONFIG_PREEMPT_VOLUNTARY=y
+# 修改：改为完全抢占，提高网络响应速度
+CONFIG_PREEMPT=y
 CONFIG_SOFTIRQ_ON_OWN_STACK=y
 CONFIG_MIGRATION=y
+# 修改：提高时钟频率到1000Hz，减少网络延迟
 CONFIG_HZ=1000
+# 新增：启用Tickless系统，降低功耗和延迟
+CONFIG_NO_HZ_FULL=y
+CONFIG_NO_HZ_FULL_ALL=y
 
 # ======================
 # Intel硬件优化 (J4125 + I226)
@@ -66,8 +71,14 @@ CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
 CONFIG_XPS=y
 CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
-CONFIG_NET_RX_BUSY_POLL=n
-CONFIG_IRQ_TIME_ACCOUNTING=n
+# 修改：启用忙轮询，提高低延迟场景性能
+CONFIG_NET_RX_BUSY_POLL=y
+CONFIG_NET_RX_BUSY_POLL_BUDGET=64
+# 修改：启用IRQ时间统计用于性能分析
+CONFIG_IRQ_TIME_ACCOUNTING=y
+# 新增：启用DMA引擎优化
+CONFIG_ASYNC_TX_DMA=y
+CONFIG_DMA_ENGINE=y
 
 # ======================
 # 内存管理优化
@@ -78,11 +89,15 @@ CONFIG_LRU_GEN_WALKS_MMU=y
 CONFIG_SLUB=y
 CONFIG_SLUB_CPU_PARTIAL=y
 CONFIG_PAGE_POOL=y
+# 新增：透明大页支持，提高内存访问效率
+CONFIG_TRANSPARENT_HUGEPAGE=y
+CONFIG_TRANSPARENT_HUGEPAGE_ALWAYS=y
 
 # ======================
 # 网络协议栈优化
 # ======================
-CONFIG_TCP_NO_TSQ=n
+# 修改：启用TSQ以减少缓冲区bloat
+CONFIG_TCP_NO_TSQ=y
 CONFIG_TCP_CONG_BBR3=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_NET_SCH_DEFAULT=y
@@ -93,6 +108,16 @@ CONFIG_PACKET=y
 CONFIG_NET_INGRESS=y
 CONFIG_NET_EGRESS=y
 CONFIG_XFRM_OFFLOAD=y
+# 新增：TCP高级优化选项
+CONFIG_TCP_MD5SIG=y
+CONFIG_TCP_AO=y
+CONFIG_INET_DIAG=y
+CONFIG_INET_TCP_DIAG=y
+CONFIG_INET_UDP_DIAG=y
+# 新增：启用多路径TCP
+CONFIG_MPTCP=y
+CONFIG_DEFAULT_MPTCP_PM="fullmesh"
+CONFIG_DEFAULT_MPTCP_SCHED="default"
 
 # ======================
 # BPF与XDP配置
@@ -115,6 +140,8 @@ CONFIG_KERNEL_CGROUP_BPF=y
 CONFIG_BPF_TOOLCHAIN_HOST=y
 CONFIG_KERNEL_XDP_SOCKETS=y
 CONFIG_LWTUNNEL_BPF=y
+# 新增：XDP重定向优化
+CONFIG_XDP_SOCKETS_DIAG=y
 
 # ======================
 # Netfilter与NAT配置
@@ -152,7 +179,12 @@ CONFIG_NF_FLOW_TABLE_HW=y
 CONFIG_NF_CT_NETLINK=y
 CONFIG_NF_FLOW=y
 CONFIG_NFT_FLOW_OFFLOAD=y
-CONFIG_NF_CONNTRACK_EVENTS=n
+# 修改：启用连接跟踪事件用于状态监控
+CONFIG_NF_CONNTRACK_EVENTS=y
+# 新增：连接跟踪性能优化
+CONFIG_NF_CONNTRACK_PROCFS=y
+CONFIG_NF_CONNTRACK_SECMARK=y
+CONFIG_NF_CT_NETLINK_TIMEOUT=y
 
 # ======================
 # 内核模块配置 (OpenWrt特有)
@@ -179,6 +211,9 @@ CONFIG_PACKAGE_kmod-nft-fullcone=y
 CONFIG_PACKAGE_kmod-nft-flow-offload=y
 CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
 CONFIG_PACKAGE_kmod-xdp-sockets-diag=y
+# 新增：网络调度器优化
+CONFIG_PACKAGE_kmod-sched-act_mirred=y
+CONFIG_PACKAGE_kmod-sched-act_skbedit=y
 
 # ======================
 # 用户态工具与库
@@ -189,6 +224,11 @@ CONFIG_PACKAGE_ethtool=y
 CONFIG_PACKAGE_irqbalance=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_libxdp=y
+# 新增：网络性能监控工具
+CONFIG_PACKAGE_htop=y
+CONFIG_PACKAGE_iftop=y
+CONFIG_PACKAGE_nethogs=y
+CONFIG_PACKAGE_tcpdump=y
 
 # ======================
 # LuCI应用配置
@@ -198,6 +238,8 @@ CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-filemanager=y
 CONFIG_PACKAGE_luci-app-irqbalance=y
 CONFIG_PACKAGE_luci-app-firewall=y
+# 新增：网络监控界面
+CONFIG_PACKAGE_luci-app-statistics=y
 
 # ======================
 # 调试与追踪配置
@@ -206,9 +248,15 @@ CONFIG_DEBUG_INFO_BTF=y
 CONFIG_BPF_KPROBE_OVERRIDE=y
 CONFIG_BPF_LSM=y
 CONFIG_HAVE_EBPF_JIT=y
+# 新增：网络性能追踪
+CONFIG_NET_DROP_MONITOR=y
+CONFIG_FTRACE=y
+CONFIG_FUNCTION_TRACER=y
 
 # ======================
 # 虚拟网络配置
 # ======================
 CONFIG_VETH=m
 CONFIG_VIRTIO_NET=m
+# 新增：虚拟网络优化
+CONFIG_VIRTIO_NET_RX_BUSY_POLL=y
