--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -37,11 +37,6 @@ CONFIG_HIGH_RES_TIMERS=y
 CONFIG_PREEMPT=y
 CONFIG_SOFTIRQ_ON_OWN_STACK=y
 CONFIG_MIGRATION=y
-# 修改：提高时钟频率到1000Hz，减少网络延迟
-CONFIG_HZ=1000
-# 新增：启用Tickless系统，降低功耗和延迟
-CONFIG_NO_HZ_FULL=y
-CONFIG_NO_HZ_FULL_ALL=y
 
 # ======================
 # Intel硬件优化 (J4125 + I226)
@@ -71,12 +66,8 @@ CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
 CONFIG_XPS=y
 CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
-# 修改：启用忙轮询，提高低延迟场景性能
-CONFIG_NET_RX_BUSY_POLL=y
-CONFIG_NET_RX_BUSY_POLL_BUDGET=64
-# 修改：启用IRQ时间统计用于性能分析
-CONFIG_IRQ_TIME_ACCOUNTING=y
-# 新增：启用DMA引擎优化
+CONFIG_NET_RX_BUSY_POLL=n
+CONFIG_IRQ_TIME_ACCOUNTING=n
 CONFIG_ASYNC_TX_DMA=y
 CONFIG_DMA_ENGINE=y
 
@@ -91,13 +82,12 @@ CONFIG_SLUB_CPU_PARTIAL=y
 CONFIG_PAGE_POOL=y
 # 新增：透明大页支持，提高内存访问效率
 CONFIG_TRANSPARENT_HUGEPAGE=y
-CONFIG_TRANSPARENT_HUGEPAGE_ALWAYS=y
 
 # ======================
 # 网络协议栈优化
 # ======================
 # 修改：启用TSQ以减少缓冲区bloat
-CONFIG_TCP_NO_TSQ=y
+CONFIG_TCP_NO_TSQ=n
 CONFIG_TCP_CONG_BBR3=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_NET_SCH_DEFAULT=y
@@ -108,16 +98,10 @@ CONFIG_PACKET=y
 CONFIG_NET_INGRESS=y
 CONFIG_NET_EGRESS=y
 CONFIG_XFRM_OFFLOAD=y
-# 新增：TCP高级优化选项
-CONFIG_TCP_MD5SIG=y
-CONFIG_TCP_AO=y
 CONFIG_INET_DIAG=y
 CONFIG_INET_TCP_DIAG=y
 CONFIG_INET_UDP_DIAG=y
-# 新增：启用多路径TCP
-CONFIG_MPTCP=y
-CONFIG_DEFAULT_MPTCP_PM="fullmesh"
-CONFIG_DEFAULT_MPTCP_SCHED="default"
+CONFIG_SYN_COOKIES=y 
 
 # ======================
 # BPF与XDP配置
@@ -140,8 +124,10 @@ CONFIG_KERNEL_CGROUP_BPF=y
 CONFIG_BPF_TOOLCHAIN_HOST=y
 CONFIG_KERNEL_XDP_SOCKETS=y
 CONFIG_LWTUNNEL_BPF=y
-# 新增：XDP重定向优化
+CONFIG_NET_SOCK_MSG=y
+CONFIG_NET_SOCK_OPS=y 
 CONFIG_XDP_SOCKETS_DIAG=y
+CONFIG_BPF_LSM=y
 
 # ======================
 # Netfilter与NAT配置
