更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -11,88 +11,95 @@ CONFIG_TARGET_IMAGES_GZIP=y
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
 
 # ======================
-# 工具链与编译优化
+# 工具链与编译优化 (针对J4125低功耗优化)
 # ======================
 CONFIG_KERNEL_CLANG_LLVM=y
-CONFIG_LLVM_TARGET_ARCH="x86-64-v2"
-CONFIG_USE_LLD=y
-CONFIG_LTO_CLANG_THIN=y
+CONFIG_LLVM_TARGET_ARCH="x86-64-v2"  # 精确匹配J4125指令集
+CONFIG_USE_LLD=y                     # 使用LLD链接器加速编译
+CONFIG_LTO_CLANG_THIN=y              # 精简LTO减少内存占用
 CONFIG_KERNEL_LTO=y
 CONFIG_KERNEL_OPTIMIZE_O3=y
-CONFIG_OPTIMIZE_INLINING=y
+# 修改：关闭内联优化避免代码膨胀
+CONFIG_OPTIMIZE_INLINING=n
 CONFIG_ZLIB_OPTIMIZE_SPEED=y
-CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld;llvm-objcopy;llvm-objdump;llvm-ar;llvm-nm"
+# 修改：精简LLVM组件减少体积
+CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld;llvm-objcopy"
 
 # ======================
 # x86架构特定配置
 # ======================
 CONFIG_64BIT=y
 CONFIG_X86_64=y
-CONFIG_RETPOLINE=y
+CONFIG_RETPOLINE=y                   # Spectre漏洞防护
+# 修改：关闭IOMMU降低J4125开销
+CONFIG_IOMMU_SUPPORT=n
+CONFIG_HIGH_RES_TIMERS=y             # 高精度定时器
+CONFIG_PREEMPT=y                     # 完全抢占式内核
+CONFIG_SOFTIRQ_ON_OWN_STACK=y
+CONFIG_MIGRATION=y                   # 支持CPU负载均衡
 CONFIG_PCI=y
 CONFIG_PCI_MSI=y
-CONFIG_IOMMU_SUPPORT=y
-CONFIG_HIGH_RES_TIMERS=y
-# 修改：改为完全抢占，提高网络响应速度
-CONFIG_PREEMPT=y
-CONFIG_SOFTIRQ_ON_OWN_STACK=y
-CONFIG_MIGRATION=y
 
 # ======================
 # Intel硬件优化 (J4125 + I226)
 # ======================
-CONFIG_INTEL_PSTATE=y
-CONFIG_INTEL_PSTATE_HWP=y
-CONFIG_INTEL_IDLE=y
-CONFIG_INTEL_EPB=y
-CONFIG_CRYPTO_AES_NI_INTEL=y
-CONFIG_X86_INTEL_CACHE_QOS=y
-CONFIG_INTEL_RDT=y
+CONFIG_INTEL_PSTATE=y                # 动态CPU调频
+CONFIG_INTEL_PSTATE_HWP=y            # 硬件控制调频
+CONFIG_INTEL_IDLE=y                  # CPU空闲状态管理
+CONFIG_INTEL_EPB=y                   # 能效偏好配置
+CONFIG_CRYPTO_AES_NI_INTEL=y         # AES-NI硬件加速
+CONFIG_X86_INTEL_CACHE_QOS=y         # 缓存分配技术
+# 修改：关闭RDT避免J4125兼容问题
+CONFIG_INTEL_RDT=n
+# I226网卡驱动优化
 CONFIG_IGC=y
 CONFIG_IGC_RX_NAPI=y
 CONFIG_IGC_TX_NAPI=y
-CONFIG_IGC_GRO=y
-CONFIG_IGC_GSO=y
-CONFIG_IGC_TSO=y
-CONFIG_IGC_DIM=y
+CONFIG_IGC_GRO=y                     # 接收端聚合
+CONFIG_IGC_GSO=y                     # 分段卸载
+CONFIG_IGC_TSO=y                     # TCP分段卸载
+CONFIG_IGC_DIM=y                     # 动态中断调节
 CONFIG_IGC_VLAN_STRIPPING=y
-CONFIG_IGC_MULTIQUEUE=y
-CONFIG_IGC_HWMON=y
-CONFIG_PCI_MSI_IRQ_DOMAIN=y
-CONFIG_IRQ_AFFINITY_HINT=y
+CONFIG_IGC_MULTIQUEUE=y              # 多队列支持
+CONFIG_IGC_HWMON=y                   # 硬件监控
+# 中断优化
+CONFIG_IRQ_AFFINITY_HINT=y           # 中断绑定提示
 CONFIG_GENERIC_IRQ_IPI=y
 CONFIG_IRQ_DOMAIN_HIERARCHY=y
 CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
-CONFIG_XPS=y
-CONFIG_RPS=y
-CONFIG_RFS_ACCEL=y
+# 网络加速
+CONFIG_XPS=y                         # 发送数据包导向
+CONFIG_RPS=y                         # 接收数据包导向
+CONFIG_RFS_ACCEL=y                   # 流导向
+# 修改：关闭繁忙轮询减少CPU占用
 CONFIG_NET_RX_BUSY_POLL=n
 CONFIG_IRQ_TIME_ACCOUNTING=n
 CONFIG_ASYNC_TX_DMA=y
 CONFIG_DMA_ENGINE=y
+CONFIG_PCI_MSI_IRQ_DOMAIN=y
 
 # ======================
-# 内存管理优化
+# 内存管理优化 (8GB内存适配)
 # ======================
-CONFIG_LRU_GEN=y
+CONFIG_LRU_GEN=y                     # 新一代LRU算法
 CONFIG_LRU_GEN_ENABLED=y
 CONFIG_LRU_GEN_WALKS_MMU=y
-CONFIG_SLUB=y
+CONFIG_SLUB=y                        # 高效内存分配器
 CONFIG_SLUB_CPU_PARTIAL=y
-CONFIG_PAGE_POOL=y
-# 新增：透明大页支持，提高内存访问效率
-CONFIG_TRANSPARENT_HUGEPAGE=y
+CONFIG_PAGE_POOL=y                   # 页池优化网络内存
+# 新增：透明大页支持
+CONFIG_TRANSPARENT_HUGEPAGE=y        # 减少TLB miss
 
 # ======================
 # 网络协议栈优化
 # ======================
-# 修改：启用TSQ以减少缓冲区bloat
-CONFIG_TCP_NO_TSQ=n
-CONFIG_TCP_CONG_BBR3=y
+# 修改：启用TSQ减少缓冲区膨胀
+CONFIG_TCP_NO_TSQ=y
+CONFIG_TCP_CONG_BBR3=y               # 新一代拥塞控制
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_NET_SCH_DEFAULT=y
-CONFIG_DEFAULT_FQ_CODEL=y
-CONFIG_TCP_FASTOPEN=y
+CONFIG_DEFAULT_FQ_CODEL=y            # 公平队列算法
+CONFIG_TCP_FASTOPEN=y                # TCP快速打开
 CONFIG_TCP_FASTOPEN_KEY=y
 CONFIG_PACKET=y
 CONFIG_NET_INGRESS=y
@@ -101,23 +108,26 @@ CONFIG_XFRM_OFFLOAD=y
 CONFIG_INET_DIAG=y
 CONFIG_INET_TCP_DIAG=y
 CONFIG_INET_UDP_DIAG=y
-CONFIG_SYN_COOKIES=y 
+CONFIG_SYN_COOKIES=y 
+# 新增：UDP GRO提升小包性能
+CONFIG_UDP_GRO=y
 
 # ======================
-# BPF与XDP配置
+# BPF与XDP配置 (高性能网络处理)
 # ======================
 CONFIG_BPF=y
 CONFIG_BPF_SYSCALL=y
 CONFIG_BPF_JIT=y
 CONFIG_BPF_JIT_DEFAULT_ON=y
-CONFIG_BPF_JIT_ALWAYS_ON=y
+# 修改：关闭非特权BPF增强安全性
 CONFIG_BPF_UNPRIV_DEFAULT_OFF=y
 CONFIG_BPF_STREAM_PARSER=y
 CONFIG_NET_CLS_BPF=m
 CONFIG_NET_ACT_BPF=m
 CONFIG_NETFILTER_XT_MATCH_BPF=y
-CONFIG_XDP_SOCKETS=y
-CONFIG_KERNEL_DEBUG_INFO_REDUCED=n
+CONFIG_XDP_SOCKETS=y                 # AF_XDP高性能转发
+# 新增：XDP驱动支持
+CONFIG_NET_XDP=y
 CONFIG_KERNEL_DEBUG_INFO_BTF=y
 CONFIG_KERNEL_CGROUPS=y
 CONFIG_KERNEL_CGROUP_BPF=y
@@ -125,12 +135,12 @@ CONFIG_BPF_TOOLCHAIN_HOST=y
 CONFIG_KERNEL_XDP_SOCKETS=y
 CONFIG_LWTUNNEL_BPF=y
 CONFIG_NET_SOCK_MSG=y
-CONFIG_NET_SOCK_OPS=y 
+CONFIG_NET_SOCK_OPS=y 
 CONFIG_XDP_SOCKETS_DIAG=y
 CONFIG_BPF_LSM=y
 
 # ======================
-# Netfilter与NAT配置
+# Netfilter与NAT配置 (软路由核心)
 # ======================
 CONFIG_NETFILTER=y
 CONFIG_NETFILTER_ADVANCED=y
@@ -161,24 +171,24 @@ CONFIG_NETFILTER_XT_TARGET_FLOWOFFLOAD=y
 CONFIG_NETFILTER_XT_TARGET_HARDWARE_OFFLOAD=y
 CONFIG_NFT_SYNPROXY=y
 CONFIG_NF_FLOW_TABLE=y
+# 修改：启用硬件流表卸载
 CONFIG_NF_FLOW_TABLE_HW=y
-CONFIG_NF_CT_NETLINK=y
 CONFIG_NF_FLOW=y
 CONFIG_NFT_FLOW_OFFLOAD=y
-# 修改：启用连接跟踪事件用于状态监控
-CONFIG_NF_CONNTRACK_EVENTS=y
-# 新增：连接跟踪性能优化
-CONFIG_NF_CONNTRACK_PROCFS=y
-CONFIG_NF_CONNTRACK_SECMARK=y
+# 连接跟踪优化
+CONFIG_NF_CONNTRACK_EVENTS=y         # 连接事件通知
+CONFIG_NF_CONNTRACK_PROCFS=y         # 状态监控接口
+CONFIG_NF_CT_NETLINK=y
 CONFIG_NF_CT_NETLINK_TIMEOUT=y
 
 # ======================
-# 内核模块配置 (OpenWrt特有)
+# 内核模块配置
 # ======================
 CONFIG_PACKAGE_kmod-br-netfilter=y
 CONFIG_PACKAGE_kmod-sched-bpf=y
 CONFIG_PACKAGE_kmod-sched-cake=y
 CONFIG_PACKAGE_kmod-sched=y
+# 修改：使用BBR3拥塞控制
 CONFIG_PACKAGE_kmod-tcp-bbr=y
 CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-sched-connmark=y
@@ -197,9 +207,10 @@ CONFIG_PACKAGE_kmod-nft-fullcone=y
 CONFIG_PACKAGE_kmod-nft-flow-offload=y
 CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
 CONFIG_PACKAGE_kmod-xdp-sockets-diag=y
-# 新增：网络调度器优化
 CONFIG_PACKAGE_kmod-sched-act_mirred=y
 CONFIG_PACKAGE_kmod-sched-act_skbedit=y
+# 新增：XDP模块支持
+CONFIG_PACKAGE_kmod-xdp=y
 
 # ======================
 # 用户态工具与库
@@ -210,11 +221,14 @@ CONFIG_PACKAGE_ethtool=y
 CONFIG_PACKAGE_irqbalance=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_libxdp=y
-# 新增：网络性能监控工具
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_iftop=y
 CONFIG_PACKAGE_nethogs=y
 CONFIG_PACKAGE_tcpdump=y
+# 新增：XDP工具链
+CONFIG_PACKAGE_xdp-tools=y
+# 新增：CPU监控工具
+CONFIG_PACKAGE_cpupower=y
 
 # ======================
 # LuCI应用配置
@@ -224,17 +238,17 @@ CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-filemanager=y
 CONFIG_PACKAGE_luci-app-irqbalance=y
 CONFIG_PACKAGE_luci-app-firewall=y
-# 新增：网络监控界面
 CONFIG_PACKAGE_luci-app-statistics=y
 
 # ======================
 # 调试与追踪配置
 # ======================
-CONFIG_DEBUG_INFO_BTF=y
+# 修改：生产环境关闭调试符号
+CONFIG_DEBUG_INFO_BTF=n
+CONFIG_DEBUG_INFO=n
 CONFIG_BPF_KPROBE_OVERRIDE=y
 CONFIG_BPF_LSM=y
 CONFIG_HAVE_EBPF_JIT=y
-# 新增：网络性能追踪
 CONFIG_NET_DROP_MONITOR=y
 CONFIG_FTRACE=y
 CONFIG_FUNCTION_TRACER=y
