--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -20,7 +20,7 @@ CONFIG_LTO_CLANG_THIN=y              # 精简LTO减少内存占用
 CONFIG_KERNEL_LTO=y
 CONFIG_KERNEL_OPTIMIZE_O3=y
 # 修改：关闭内联优化避免代码膨胀
-CONFIG_OPTIMIZE_INLINING=n
+CONFIG_OPTIMIZE_INLINING=y
 CONFIG_ZLIB_OPTIMIZE_SPEED=y
 # 修改：精简LLVM组件减少体积
 CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld;llvm-objcopy"
@@ -30,15 +30,19 @@ CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld;llvm-objcopy"
 # ======================
 CONFIG_64BIT=y
 CONFIG_X86_64=y
-CONFIG_RETPOLINE=y                   # Spectre漏洞防护
-# 修改：关闭IOMMU降低J4125开销
-CONFIG_IOMMU_SUPPORT=n
+CONFIG_RETPOLINE=y                   
+CONFIG_IOMMU_SUPPORT=y
 CONFIG_HIGH_RES_TIMERS=y             # 高精度定时器
 CONFIG_PREEMPT=y                     # 完全抢占式内核
 CONFIG_SOFTIRQ_ON_OWN_STACK=y
 CONFIG_MIGRATION=y                   # 支持CPU负载均衡
 CONFIG_PCI=y
 CONFIG_PCI_MSI=y
+CONFIG_PREEMPT_VOLUNTARY=y    
+CONFIG_X86_INTEL_LPSS=y        # J4125低功耗子系统
+CONFIG_X86_CPU_RESCTRL=y       # 资源控制
+CONFIG_X86_MCE=y               # 机器检查异常
+CONFIG_MTRR=y                  # 内存类型范围寄存器
 
 # ======================
 # Intel硬件优化 (J4125 + I226)
@@ -49,8 +53,8 @@ CONFIG_INTEL_IDLE=y                  # CPU空闲状态管理
 CONFIG_INTEL_EPB=y                   # 能效偏好配置
 CONFIG_CRYPTO_AES_NI_INTEL=y         # AES-NI硬件加速
 CONFIG_X86_INTEL_CACHE_QOS=y         # 缓存分配技术
-# 修改：关闭RDT避免J4125兼容问题
-CONFIG_INTEL_RDT=n
+CONFIG_INTEL_RDT=y
+CONFIG_INTEL_CAT=y           # 缓存分配技术
 # I226网卡驱动优化
 CONFIG_IGC=y
 CONFIG_IGC_RX_NAPI=y
@@ -73,7 +77,7 @@ CONFIG_RPS=y                         # 接收数据包导向
 CONFIG_RFS_ACCEL=y                   # 流导向
 # 修改：关闭繁忙轮询减少CPU占用
 CONFIG_NET_RX_BUSY_POLL=n
-CONFIG_IRQ_TIME_ACCOUNTING=n
+CONFIG_IRQ_TIME_ACCOUNTING=y
 CONFIG_ASYNC_TX_DMA=y
 CONFIG_DMA_ENGINE=y
 CONFIG_PCI_MSI_IRQ_DOMAIN=y
@@ -81,21 +85,28 @@ CONFIG_PCI_MSI_IRQ_DOMAIN=y
 # ======================
 # 内存管理优化 (8GB内存适配)
 # ======================
-CONFIG_LRU_GEN=y                     # 新一代LRU算法
-CONFIG_LRU_GEN_ENABLED=y
-CONFIG_LRU_GEN_WALKS_MMU=y
-CONFIG_SLUB=y                        # 高效内存分配器
+# 基础分配器
+CONFIG_SLUB=y
 CONFIG_SLUB_CPU_PARTIAL=y
-CONFIG_PAGE_POOL=y                   # 页池优化网络内存
-# 新增：透明大页支持
-CONFIG_TRANSPARENT_HUGEPAGE=y        # 减少TLB miss
+CONFIG_SLUB_DEBUG=n
+# 内存管理
+CONFIG_SPARSEMEM=y
+CONFIG_SPARSEMEM_VMEMMAP_ENABLE=y
+CONFIG_MEMORY_HOTPLUG=n           # 路由器不需要热插拔
+# 网络内存优化
+CONFIG_PAGE_POOL=y
+CONFIG_PAGE_POOL_STATS=y
+CONFIG_NET_MM=y
+# 禁用可能影响性能的特性
+CONFIG_TRANSPARENT_HUGEPAGE=never
+CONFIG_LRU_GEN=n                  # 使用传统稳定LRU
 
 # ======================
 # 网络协议栈优化
 # ======================
 # 修改：启用TSQ减少缓冲区膨胀
-CONFIG_TCP_NO_TSQ=y
-CONFIG_TCP_CONG_BBR3=y               # 新一代拥塞控制
+CONFIG_TCP_NO_TSQ=n
+CONFIG_TCP_CONG_BBR=y               # 新一代拥塞控制
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_NET_SCH_DEFAULT=y
 CONFIG_DEFAULT_FQ_CODEL=y            # 公平队列算法
@@ -119,14 +130,12 @@ CONFIG_BPF=y
 CONFIG_BPF_SYSCALL=y
 CONFIG_BPF_JIT=y
 CONFIG_BPF_JIT_DEFAULT_ON=y
-# 修改：关闭非特权BPF增强安全性
 CONFIG_BPF_UNPRIV_DEFAULT_OFF=y
 CONFIG_BPF_STREAM_PARSER=y
-CONFIG_NET_CLS_BPF=m
-CONFIG_NET_ACT_BPF=m
+CONFIG_NET_CLS_BPF=y
+CONFIG_NET_ACT_BPF=y
 CONFIG_NETFILTER_XT_MATCH_BPF=y
-CONFIG_XDP_SOCKETS=y                 # AF_XDP高性能转发
-# 新增：XDP驱动支持
+CONFIG_XDP_SOCKETS=y                 
 CONFIG_NET_XDP=y
 CONFIG_KERNEL_DEBUG_INFO_BTF=y
 CONFIG_KERNEL_CGROUPS=y
@@ -138,6 +147,11 @@ CONFIG_NET_SOCK_MSG=y
 CONFIG_NET_SOCK_OPS=y 
 CONFIG_XDP_SOCKETS_DIAG=y
 CONFIG_BPF_LSM=y
+CONFIG_IGC_XDP=y                   
+CONFIG_NET_VENDOR_INTEL=y
+CONFIG_NF_FLOW_TABLE_INET=y
+CONFIG_NF_FLOW_TABLE_IPV4=y
+CONFIG_NF_FLOW_TABLE_IPV6=y
 
 # ======================
 # Netfilter与NAT配置 (软路由核心)
@@ -188,7 +202,6 @@ CONFIG_PACKAGE_kmod-br-netfilter=y
 CONFIG_PACKAGE_kmod-sched-bpf=y
 CONFIG_PACKAGE_kmod-sched-cake=y
 CONFIG_PACKAGE_kmod-sched=y
-# 修改：使用BBR3拥塞控制
 CONFIG_PACKAGE_kmod-tcp-bbr=y
 CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-sched-connmark=y
@@ -209,7 +222,6 @@ CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
 CONFIG_PACKAGE_kmod-xdp-sockets-diag=y
 CONFIG_PACKAGE_kmod-sched-act_mirred=y
 CONFIG_PACKAGE_kmod-sched-act_skbedit=y
-# 新增：XDP模块支持
 CONFIG_PACKAGE_kmod-xdp=y
 
 # ======================
@@ -224,10 +236,7 @@ CONFIG_PACKAGE_libxdp=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_iftop=y
 CONFIG_PACKAGE_nethogs=y
-CONFIG_PACKAGE_tcpdump=y
-# 新增：XDP工具链
 CONFIG_PACKAGE_xdp-tools=y
-# 新增：CPU监控工具
 CONFIG_PACKAGE_cpupower=y
 
 # ======================
@@ -246,17 +255,9 @@ CONFIG_PACKAGE_luci-app-statistics=y
 # 修改：生产环境关闭调试符号
 CONFIG_DEBUG_INFO_BTF=n
 CONFIG_DEBUG_INFO=n
-CONFIG_BPF_KPROBE_OVERRIDE=y
+CONFIG_BPF_KPROBE_OVERRIDE=n
 CONFIG_BPF_LSM=y
 CONFIG_HAVE_EBPF_JIT=y
 CONFIG_NET_DROP_MONITOR=y
-CONFIG_FTRACE=y
-CONFIG_FUNCTION_TRACER=y
-
-# ======================
-# 虚拟网络配置
-# ======================
-CONFIG_VETH=m
-CONFIG_VIRTIO_NET=m
-# 新增：虚拟网络优化
-CONFIG_VIRTIO_NET_RX_BUSY_POLL=y
+CONFIG_FTRACE=n
+CONFIG_FUNCTION_TRACER=n
