更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -14,15 +14,13 @@ CONFIG_TARGET_ROOTFS_SQUASHFS=y
 # 工具链与编译优化 (针对J4125低功耗优化)
 # ======================
 CONFIG_KERNEL_CLANG_LLVM=y
-CONFIG_LLVM_TARGET_ARCH="x86-64-v2"  # 精确匹配J4125指令集
-CONFIG_USE_LLD=y                     # 使用LLD链接器加速编译
-CONFIG_LTO_CLANG_THIN=y              # 精简LTO减少内存占用
+CONFIG_LLVM_TARGET_ARCH="x86-64-v2"
+CONFIG_USE_LLD=y
+CONFIG_LTO_CLANG_THIN=y
 CONFIG_KERNEL_LTO=y
 CONFIG_KERNEL_OPTIMIZE_O3=y
-# 修改：关闭内联优化避免代码膨胀
 CONFIG_OPTIMIZE_INLINING=y
 CONFIG_ZLIB_OPTIMIZE_SPEED=y
-# 修改：精简LLVM组件减少体积
 CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld;llvm-objcopy"
 
 # ======================
@@ -30,52 +28,48 @@ CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld;llvm-objcopy"
 # ======================
 CONFIG_64BIT=y
 CONFIG_X86_64=y
-CONFIG_RETPOLINE=y                   
+CONFIG_RETPOLINE=y
 CONFIG_IOMMU_SUPPORT=y
-CONFIG_HIGH_RES_TIMERS=y             # 高精度定时器
-CONFIG_PREEMPT=y                     # 完全抢占式内核
+CONFIG_HIGH_RES_TIMERS=y
+CONFIG_PREEMPT=y
 CONFIG_SOFTIRQ_ON_OWN_STACK=y
-CONFIG_MIGRATION=y                   # 支持CPU负载均衡
+CONFIG_MIGRATION=y
 CONFIG_PCI=y
 CONFIG_PCI_MSI=y
-CONFIG_PREEMPT_VOLUNTARY=y    
-CONFIG_X86_INTEL_LPSS=y        # J4125低功耗子系统
-CONFIG_X86_CPU_RESCTRL=y       # 资源控制
-CONFIG_X86_MCE=y               # 机器检查异常
-CONFIG_MTRR=y                  # 内存类型范围寄存器
+CONFIG_PREEMPT_VOLUNTARY=y
+CONFIG_X86_INTEL_LPSS=y
+CONFIG_X86_CPU_RESCTRL=y
+CONFIG_X86_MCE=y
+CONFIG_MTRR=y
 
 # ======================
 # Intel硬件优化 (J4125 + I226)
 # ======================
-CONFIG_INTEL_PSTATE=y                # 动态CPU调频
-CONFIG_INTEL_PSTATE_HWP=y            # 硬件控制调频
-CONFIG_INTEL_IDLE=y                  # CPU空闲状态管理
-CONFIG_INTEL_EPB=y                   # 能效偏好配置
-CONFIG_CRYPTO_AES_NI_INTEL=y         # AES-NI硬件加速
-CONFIG_X86_INTEL_CACHE_QOS=y         # 缓存分配技术
+CONFIG_INTEL_PSTATE=y
+CONFIG_INTEL_PSTATE_HWP=y
+CONFIG_INTEL_IDLE=y
+CONFIG_INTEL_EPB=y
+CONFIG_CRYPTO_AES_NI_INTEL=y
+CONFIG_X86_INTEL_CACHE_QOS=y
 CONFIG_INTEL_RDT=y
-CONFIG_INTEL_CAT=y           # 缓存分配技术
-# I226网卡驱动优化
+CONFIG_INTEL_CAT=y
 CONFIG_IGC=y
 CONFIG_IGC_RX_NAPI=y
 CONFIG_IGC_TX_NAPI=y
-CONFIG_IGC_GRO=y                     # 接收端聚合
-CONFIG_IGC_GSO=y                     # 分段卸载
-CONFIG_IGC_TSO=y                     # TCP分段卸载
-CONFIG_IGC_DIM=y                     # 动态中断调节
+CONFIG_IGC_GRO=y
+CONFIG_IGC_GSO=y
+CONFIG_IGC_TSO=y
+CONFIG_IGC_DIM=y
 CONFIG_IGC_VLAN_STRIPPING=y
-CONFIG_IGC_MULTIQUEUE=y              # 多队列支持
-CONFIG_IGC_HWMON=y                   # 硬件监控
-# 中断优化
-CONFIG_IRQ_AFFINITY_HINT=y           # 中断绑定提示
+CONFIG_IGC_MULTIQUEUE=y
+CONFIG_IGC_HWMON=y
+CONFIG_IRQ_AFFINITY_HINT=y
 CONFIG_GENERIC_IRQ_IPI=y
 CONFIG_IRQ_DOMAIN_HIERARCHY=y
 CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
-# 网络加速
-CONFIG_XPS=y                         # 发送数据包导向
-CONFIG_RPS=y                         # 接收数据包导向
-CONFIG_RFS_ACCEL=y                   # 流导向
-# 修改：关闭繁忙轮询减少CPU占用
+CONFIG_XPS=y
+CONFIG_RPS=y
+CONFIG_RFS_ACCEL=y
 CONFIG_NET_RX_BUSY_POLL=n
 CONFIG_IRQ_TIME_ACCOUNTING=y
 CONFIG_ASYNC_TX_DMA=y
@@ -85,32 +79,27 @@ CONFIG_PCI_MSI_IRQ_DOMAIN=y
 # ======================
 # 内存管理优化 (8GB内存适配)
 # ======================
-# 基础分配器
 CONFIG_SLUB=y
 CONFIG_SLUB_CPU_PARTIAL=y
 CONFIG_SLUB_DEBUG=n
-# 内存管理
 CONFIG_SPARSEMEM=y
 CONFIG_SPARSEMEM_VMEMMAP_ENABLE=y
-CONFIG_MEMORY_HOTPLUG=n           # 路由器不需要热插拔
-# 网络内存优化
+CONFIG_MEMORY_HOTPLUG=n
 CONFIG_PAGE_POOL=y
 CONFIG_PAGE_POOL_STATS=y
 CONFIG_NET_MM=y
-# 禁用可能影响性能的特性
 CONFIG_TRANSPARENT_HUGEPAGE=never
-CONFIG_LRU_GEN=n                  # 使用传统稳定LRU
+CONFIG_LRU_GEN=n
 
 # ======================
 # 网络协议栈优化
 # ======================
-# 修改：启用TSQ减少缓冲区膨胀
 CONFIG_TCP_NO_TSQ=n
-CONFIG_TCP_CONG_BBR=y               # 新一代拥塞控制
+CONFIG_TCP_CONG_BBR=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_NET_SCH_DEFAULT=y
-CONFIG_DEFAULT_FQ_CODEL=y            # 公平队列算法
-CONFIG_TCP_FASTOPEN=y                # TCP快速打开
+CONFIG_DEFAULT_FQ_CODEL=y
+CONFIG_TCP_FASTOPEN=y
 CONFIG_TCP_FASTOPEN_KEY=y
 CONFIG_PACKET=y
 CONFIG_NET_INGRESS=y
@@ -119,8 +108,7 @@ CONFIG_XFRM_OFFLOAD=y
 CONFIG_INET_DIAG=y
 CONFIG_INET_TCP_DIAG=y
 CONFIG_INET_UDP_DIAG=y
-CONFIG_SYN_COOKIES=y 
-# 新增：UDP GRO提升小包性能
+CONFIG_SYN_COOKIES=y
 CONFIG_UDP_GRO=y
 
 # ======================
@@ -135,7 +123,7 @@ CONFIG_BPF_STREAM_PARSER=y
 CONFIG_NET_CLS_BPF=y
 CONFIG_NET_ACT_BPF=y
 CONFIG_NETFILTER_XT_MATCH_BPF=y
-CONFIG_XDP_SOCKETS=y                 
+CONFIG_XDP_SOCKETS=y
 CONFIG_NET_XDP=y
 CONFIG_KERNEL_DEBUG_INFO_BTF=y
 CONFIG_KERNEL_CGROUPS=y
@@ -144,10 +132,10 @@ CONFIG_BPF_TOOLCHAIN_HOST=y
 CONFIG_KERNEL_XDP_SOCKETS=y
 CONFIG_LWTUNNEL_BPF=y
 CONFIG_NET_SOCK_MSG=y
-CONFIG_NET_SOCK_OPS=y 
+CONFIG_NET_SOCK_OPS=y
 CONFIG_XDP_SOCKETS_DIAG=y
 CONFIG_BPF_LSM=y
-CONFIG_IGC_XDP=y                   
+CONFIG_IGC_XDP=y
 CONFIG_NET_VENDOR_INTEL=y
 CONFIG_NF_FLOW_TABLE_INET=y
 CONFIG_NF_FLOW_TABLE_IPV4=y
@@ -185,13 +173,11 @@ CONFIG_NETFILTER_XT_TARGET_FLOWOFFLOAD=y
 CONFIG_NETFILTER_XT_TARGET_HARDWARE_OFFLOAD=y
 CONFIG_NFT_SYNPROXY=y
 CONFIG_NF_FLOW_TABLE=y
-# 修改：启用硬件流表卸载
 CONFIG_NF_FLOW_TABLE_HW=y
 CONFIG_NF_FLOW=y
 CONFIG_NFT_FLOW_OFFLOAD=y
-# 连接跟踪优化
-CONFIG_NF_CONNTRACK_EVENTS=y         # 连接事件通知
-CONFIG_NF_CONNTRACK_PROCFS=y         # 状态监控接口
+CONFIG_NF_CONNTRACK_EVENTS=y
+CONFIG_NF_CONNTRACK_PROCFS=y
 CONFIG_NF_CT_NETLINK=y
 CONFIG_NF_CT_NETLINK_TIMEOUT=y
 
@@ -252,7 +238,6 @@ CONFIG_PACKAGE_luci-app-statistics=y
 # ======================
 # 调试与追踪配置
 # ======================
-# 修改：生产环境关闭调试符号
 CONFIG_DEBUG_INFO_BTF=n
 CONFIG_DEBUG_INFO=n
 CONFIG_BPF_KPROBE_OVERRIDE=n
