--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -31,12 +31,11 @@ CONFIG_X86_64=y
 CONFIG_RETPOLINE=y
 CONFIG_IOMMU_SUPPORT=y
 CONFIG_HIGH_RES_TIMERS=y
-CONFIG_PREEMPT=y
 CONFIG_SOFTIRQ_ON_OWN_STACK=y
 CONFIG_MIGRATION=y
 CONFIG_PCI=y
 CONFIG_PCI_MSI=y
-CONFIG_PREEMPT_VOLUNTARY=y
+CONFIG_PREEMPT_NONE=y     
 CONFIG_X86_INTEL_LPSS=y
 CONFIG_X86_CPU_RESCTRL=y
 CONFIG_X86_MCE=y
@@ -70,7 +69,7 @@ CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
 CONFIG_XPS=y
 CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
-CONFIG_NET_RX_BUSY_POLL=n
+CONFIG_NET_RX_BUSY_POLL=y
 CONFIG_IRQ_TIME_ACCOUNTING=y
 CONFIG_ASYNC_TX_DMA=y
 CONFIG_DMA_ENGINE=y
@@ -82,8 +81,7 @@ CONFIG_PCI_MSI_IRQ_DOMAIN=y
 CONFIG_SLUB=y
 CONFIG_SLUB_CPU_PARTIAL=y
 CONFIG_SLUB_DEBUG=n
-CONFIG_SPARSEMEM=y
-CONFIG_SPARSEMEM_VMEMMAP_ENABLE=y
+CONFIG_SPARSEMEM=n
 CONFIG_MEMORY_HOTPLUG=n
 CONFIG_PAGE_POOL=y
 CONFIG_PAGE_POOL_STATS=y
@@ -238,8 +236,8 @@ CONFIG_PACKAGE_luci-app-statistics=y
 # ======================
 # 调试与追踪配置
 # ======================
-CONFIG_DEBUG_INFO_BTF=n
-CONFIG_DEBUG_INFO=n
+CONFIG_DEBUG_INFO_BTF=y
+CONFIG_DEBUG_INFO=y
 CONFIG_BPF_KPROBE_OVERRIDE=n
 CONFIG_BPF_LSM=y
 CONFIG_HAVE_EBPF_JIT=y
