--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -35,7 +35,7 @@ CONFIG_SOFTIRQ_ON_OWN_STACK=y
 CONFIG_MIGRATION=y
 CONFIG_PCI=y
 CONFIG_PCI_MSI=y
-CONFIG_PREEMPT_NONE=y     
+CONFIG_PREEMPT_VOLUNTARY=y  
 CONFIG_X86_INTEL_LPSS=y
 CONFIG_X86_CPU_RESCTRL=y
 CONFIG_X86_MCE=y
@@ -81,7 +81,7 @@ CONFIG_PCI_MSI_IRQ_DOMAIN=y
 CONFIG_SLUB=y
 CONFIG_SLUB_CPU_PARTIAL=y
 CONFIG_PAGE_POOL=y
-CONFIG_PAGE_POOL_STATS=y
+CONFIG_PAGE_POOL_STATS=n
 CONFIG_NET_MM=y
 
 # ======================
@@ -164,7 +164,7 @@ CONFIG_NETFILTER_XT_TARGET_FLOWOFFLOAD=y
 CONFIG_NETFILTER_XT_TARGET_HARDWARE_OFFLOAD=y
 CONFIG_NFT_SYNPROXY=y
 CONFIG_NF_FLOW_TABLE=y
-CONFIG_NF_FLOW_TABLE_HW=y
+CONFIG_NF_FLOW_TABLE_HW=n
 CONFIG_NF_FLOW=y
 CONFIG_NFT_FLOW_OFFLOAD=y
 CONFIG_NF_CONNTRACK_EVENTS=y
@@ -230,7 +230,7 @@ CONFIG_PACKAGE_luci-app-statistics=y
 # 调试与追踪配置
 # ======================
 CONFIG_DEBUG_INFO_BTF=y
-CONFIG_DEBUG_INFO=y
+CONFIG_DEBUG_INFO=n
 CONFIG_BPF_LSM=y
 CONFIG_HAVE_EBPF_JIT=y
 CONFIG_NET_DROP_MONITOR=y
