更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -40,6 +40,9 @@ CONFIG_X86_INTEL_LPSS=y
 CONFIG_X86_CPU_RESCTRL=y
 CONFIG_X86_MCE=y
 CONFIG_MTRR=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
+CONFIG_INTEL_TURBO_MAX_3=y
 
 # ======================
 # Intel硬件优化 (J4125 + I226)
@@ -74,6 +77,11 @@ CONFIG_IRQ_TIME_ACCOUNTING=y
 CONFIG_ASYNC_TX_DMA=y
 CONFIG_DMA_ENGINE=y
 CONFIG_PCI_MSI_IRQ_DOMAIN=y
+CONFIG_RANDOMIZE_BASE=y                
+CONFIG_STATIC_USERMODEHELPER=y  
+CONFIG_HARDENED_USERCOPY=y
+CONFIG_NETFILTER_XT_MATCH_CPU=y        
+CONFIG_SYNPROXY=y                      
 
 # ======================
 # 内存管理优化 (8GB内存适配)
@@ -102,6 +110,8 @@ CONFIG_INET_TCP_DIAG=y
 CONFIG_INET_UDP_DIAG=y
 CONFIG_SYN_COOKIES=y
 CONFIG_UDP_GRO=y
+CONFIG_TCP_MD5SIG=y
+CONFIG_IPV6_SEG6_LWTUNNEL=y
 
 # ======================
 # BPF与XDP配置 (高性能网络处理)
