更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -35,7 +35,7 @@ CONFIG_SOFTIRQ_ON_OWN_STACK=y
 CONFIG_MIGRATION=y
 CONFIG_PCI=y
 CONFIG_PCI_MSI=y
-CONFIG_PREEMPT_VOLUNTARY=y  
+CONFIG_PREEMPT=y  
 CONFIG_X86_INTEL_LPSS=y
 CONFIG_X86_CPU_RESCTRL=y
 CONFIG_X86_MCE=y
@@ -207,9 +207,6 @@ CONFIG_PACKAGE_kmod-nft-fullcone=y
 CONFIG_PACKAGE_kmod-nft-flow-offload=y
 CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
 CONFIG_PACKAGE_kmod-xdp-sockets-diag=y
-CONFIG_PACKAGE_kmod-sched-act_mirred=y
-CONFIG_PACKAGE_kmod-sched-act_skbedit=y
-CONFIG_PACKAGE_kmod-xdp=y
 
 # ======================
 # 用户态工具与库
@@ -222,9 +219,6 @@ CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_libxdp=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_iftop=y
-CONFIG_PACKAGE_nethogs=y
-CONFIG_PACKAGE_xdp-tools=y
-CONFIG_PACKAGE_cpupower=y
 
 # ======================
 # LuCI应用配置
