更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -11,7 +11,7 @@ CONFIG_TARGET_IMAGES_GZIP=y
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
 
 # ======================
-# 工具链与编译优化 (针对J4125低功耗优化)
+# 工具链与编译优化 (J4125专用优化)
 # ======================
 CONFIG_KERNEL_CLANG_LLVM=y
 CONFIG_LLVM_TARGET_ARCH="x86-64-v2"
@@ -19,12 +19,14 @@ CONFIG_USE_LLD=y
 CONFIG_LTO_CLANG_THIN=y
 CONFIG_KERNEL_LTO=y
 CONFIG_KERNEL_OPTIMIZE_O3=y
+CONFIG_OPTIMIZE_FOR_SIZE=n
 CONFIG_OPTIMIZE_INLINING=y
+CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
 CONFIG_ZLIB_OPTIMIZE_SPEED=y
 CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld;llvm-objcopy"
 
 # ======================
-# x86架构特定配置
+# x86架构特定配置 (性能优化)
 # ======================
 CONFIG_64BIT=y
 CONFIG_X86_64=y
@@ -35,17 +37,19 @@ CONFIG_SOFTIRQ_ON_OWN_STACK=y
 CONFIG_MIGRATION=y
 CONFIG_PCI=y
 CONFIG_PCI_MSI=y
-CONFIG_PREEMPT=y  
 CONFIG_X86_INTEL_LPSS=y
 CONFIG_X86_CPU_RESCTRL=y
 CONFIG_X86_MCE=y
 CONFIG_MTRR=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_INTEL_TURBO_MAX_3=y
+CONFIG_SCHED_MC=y
+CONFIG_SCHED_SMT=y
 
 # ======================
-# Intel硬件优化 (J4125 + I226)
+# Intel硬件优化 (J4125 + I226深度优化)
 # ======================
 CONFIG_INTEL_PSTATE=y
 CONFIG_INTEL_PSTATE_HWP=y
@@ -77,30 +81,37 @@ CONFIG_IRQ_TIME_ACCOUNTING=y
 CONFIG_ASYNC_TX_DMA=y
 CONFIG_DMA_ENGINE=y
 CONFIG_PCI_MSI_IRQ_DOMAIN=y
-CONFIG_RANDOMIZE_BASE=y                
-CONFIG_STATIC_USERMODEHELPER=y  
+CONFIG_RANDOMIZE_BASE=y
+CONFIG_STATIC_USERMODEHELPER=y
 CONFIG_HARDENED_USERCOPY=y
-CONFIG_NETFILTER_XT_MATCH_CPU=y        
-CONFIG_SYNPROXY=y                      
 
 # ======================
-# 内存管理优化 (8GB内存适配)
+# 内存管理优化 (8GB内存高性能配置)
 # ======================
 CONFIG_SLUB=y
 CONFIG_SLUB_CPU_PARTIAL=y
+CONFIG_SLUB_DEBUG=n
 CONFIG_PAGE_POOL=y
 CONFIG_PAGE_POOL_STATS=n
 CONFIG_NET_MM=y
+CONFIG_COMPACTION=y
+CONFIG_TRANSPARENT_HUGEPAGE=y
+CONFIG_TRANSPARENT_HUGEPAGE_ALWAYS=n
+CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
+CONFIG_ZSWAP=n  # 关闭压缩交换以减少CPU开销
 
 # ======================
-# 网络协议栈优化
+# 网络协议栈优化 (低延迟高性能)
 # ======================
 CONFIG_TCP_CONG_BBR=y
+CONFIG_TCP_CONG_BBR2=y
+CONFIG_DEFAULT_TCP_CONG="bbr"
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_NET_SCH_DEFAULT=y
 CONFIG_DEFAULT_FQ_CODEL=y
 CONFIG_TCP_FASTOPEN=y
 CONFIG_TCP_FASTOPEN_KEY=y
+CONFIG_TCP_AO=y
 CONFIG_PACKET=y
 CONFIG_NET_INGRESS=y
 CONFIG_NET_EGRESS=y
@@ -112,9 +123,12 @@ CONFIG_SYN_COOKIES=y
 CONFIG_UDP_GRO=y
 CONFIG_TCP_MD5SIG=y
 CONFIG_IPV6_SEG6_LWTUNNEL=y
+CONFIG_NET_SCH_FQ_CODEL=y
+CONFIG_NET_SCH_CAKE=y
+CONFIG_NET_SCH_FQ=y
 
 # ======================
-# BPF与XDP配置 (高性能网络处理)
+# BPF与XDP配置 (零拷贝高性能网络)
 # ======================
 CONFIG_BPF=y
 CONFIG_BPF_SYSCALL=y
@@ -143,7 +157,7 @@ CONFIG_NF_FLOW_TABLE_IPV4=y
 CONFIG_NF_FLOW_TABLE_IPV6=y
 
 # ======================
-# Netfilter与NAT配置 (软路由核心)
+# Netfilter与NAT配置 (硬件卸载优化)
 # ======================
 CONFIG_NETFILTER=y
 CONFIG_NETFILTER_ADVANCED=y
@@ -181,9 +195,11 @@ CONFIG_NF_CONNTRACK_EVENTS=y
 CONFIG_NF_CONNTRACK_PROCFS=y
 CONFIG_NF_CT_NETLINK=y
 CONFIG_NF_CT_NETLINK_TIMEOUT=y
+CONFIG_NF_CONNTRACK_TIMEOUT=y
+CONFIG_NF_CONNTRACK_ACCT=y
 
 # ======================
-# 内核模块配置
+# 内核模块配置 (精简优化)
 # ======================
 CONFIG_PACKAGE_kmod-br-netfilter=y
 CONFIG_PACKAGE_kmod-sched-bpf=y
@@ -209,7 +225,7 @@ CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
 CONFIG_PACKAGE_kmod-xdp-sockets-diag=y
 
 # ======================
-# 用户态工具与库
+# 用户态工具与库 (性能监控)
 # ======================
 CONFIG_PACKAGE_libnftnl=y
 CONFIG_PACKAGE_ip-full=y
@@ -217,11 +233,9 @@ CONFIG_PACKAGE_ethtool=y
 CONFIG_PACKAGE_irqbalance=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_libxdp=y
-CONFIG_PACKAGE_htop=y
-CONFIG_PACKAGE_iftop=y
 
 # ======================
-# LuCI应用配置
+# LuCI应用配置 (精简实用)
 # ======================
 CONFIG_PACKAGE_luci-app-arpbind=y
 CONFIG_PACKAGE_luci-app-oaf=y
@@ -230,10 +244,26 @@ CONFIG_PACKAGE_luci-app-irqbalance=y
 CONFIG_PACKAGE_luci-app-firewall=y
 
 # ======================
-# 调试与追踪配置
+# 调试与追踪配置 (生产环境优化)
 # ======================
 CONFIG_DEBUG_INFO_BTF=y
 CONFIG_DEBUG_INFO=n
+CONFIG_DEBUG_KERNEL=n
+CONFIG_SLUB_DEBUG=n
+CONFIG_PROFILING=n
 CONFIG_BPF_LSM=y
 CONFIG_HAVE_EBPF_JIT=y
-CONFIG_NET_DROP_MONITOR=y
+CONFIG_NET_DROP_MONITOR=n  # 关闭网络丢包监控减少开销
+CONFIG_FTRACE=n
+CONFIG_KPROBES=n
+
+# ======================
+# 电源管理优化 (J4125低功耗)
+# ======================
+CONFIG_CPU_IDLE_GOV_MENU=y
+CONFIG_PM=y
+CONFIG_PM_SLEEP=y
+CONFIG_SUSPEND=y
+CONFIG_HIBERNATION=y
+CONFIG_ACPI=y
+CONFIG_ACPI_THERMAL=y
