--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -1,9 +1,9 @@
 # ======================
-# 目标架构与固件配置
+# 目标架构与固件基础配置
 # ======================
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
-CONFIG_TARGET_x86_64_DEVICE_GENERIC=y
+CONFIG_TARGET_GENERIC=y
 CONFIG_TARGET_KERNEL_PARTSIZE=32
 CONFIG_TARGET_ROOTFS_PARTSIZE=944
 CONFIG_GRUB_EFI_IMAGES=y
@@ -11,7 +11,7 @@ CONFIG_TARGET_IMAGES_GZIP=y
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
 
 # ======================
-# 工具链与编译优化 (J4125专用优化)
+# 工具链与编译优化（J4125专用）
 # ======================
 CONFIG_KERNEL_CLANG_LLVM=y
 CONFIG_LLVM_TARGET_ARCH="x86-64-v2"
@@ -23,216 +23,116 @@ CONFIG_OPTIMIZE_FOR_SIZE=n
 CONFIG_OPTIMIZE_INLINING=y
 CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
 CONFIG_ZLIB_OPTIMIZE_SPEED=y
-CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld;llvm-objcopy"
+CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld"
 
 # ======================
-# x86架构特定配置 (性能优化)
+# x86架构核心优化
 # ======================
 CONFIG_64BIT=y
 CONFIG_X86_64=y
 CONFIG_RETPOLINE=y
 CONFIG_IOMMU_SUPPORT=y
-CONFIG_HIGH_RES_TIMERS=y
-CONFIG_SOFTIRQ_ON_OWN_STACK=y
-CONFIG_MIGRATION=y
 CONFIG_PCI=y
 CONFIG_PCI_MSI=y
-CONFIG_X86_INTEL_LPSS=y
-CONFIG_X86_CPU_RESCTRL=y
-CONFIG_X86_MCE=y
+CONFIG_HIGH_RES_TIMERS=y
+CONFIG_SOFTIRQ_ON_OWN_STACK=y
 CONFIG_MTRR=y
-CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
-CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_INTEL_TURBO_MAX_3=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 CONFIG_SCHED_MC=y
 CONFIG_SCHED_SMT=y
 
 # ======================
-# Intel硬件优化 (J4125 + I226深度优化)
+# Intel硬件深度优化（J4125+I226）
 # ======================
 CONFIG_INTEL_PSTATE=y
 CONFIG_INTEL_PSTATE_HWP=y
 CONFIG_INTEL_IDLE=y
-CONFIG_INTEL_EPB=y
-CONFIG_CRYPTO_AES_NI_INTEL=y
-CONFIG_X86_INTEL_CACHE_QOS=y
-CONFIG_INTEL_RDT=y
-CONFIG_INTEL_CAT=y
-CONFIG_IGC=y
+CONFIG_IGC=y                      
 CONFIG_IGC_RX_NAPI=y
 CONFIG_IGC_TX_NAPI=y
 CONFIG_IGC_GRO=y
 CONFIG_IGC_GSO=y
 CONFIG_IGC_TSO=y
-CONFIG_IGC_DIM=y
-CONFIG_IGC_VLAN_STRIPPING=y
-CONFIG_IGC_MULTIQUEUE=y
-CONFIG_IGC_HWMON=y
-CONFIG_IRQ_AFFINITY_HINT=y
+CONFIG_IGC_DIM=y                  
+CONFIG_IRQ_AFFINITY_HINT=y       
 CONFIG_GENERIC_IRQ_IPI=y
 CONFIG_IRQ_DOMAIN_HIERARCHY=y
-CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
-CONFIG_XPS=y
-CONFIG_RPS=y
-CONFIG_RFS_ACCEL=y
-CONFIG_NET_RX_BUSY_POLL=y
-CONFIG_IRQ_TIME_ACCOUNTING=y
-CONFIG_ASYNC_TX_DMA=y
-CONFIG_DMA_ENGINE=y
-CONFIG_PCI_MSI_IRQ_DOMAIN=y
-CONFIG_RANDOMIZE_BASE=y
-CONFIG_STATIC_USERMODEHELPER=y
-CONFIG_HARDENED_USERCOPY=y
+CONFIG_XPS=y                     
+CONFIG_RFS_ACCEL=y              
+CONFIG_NET_RX_BUSY_POLL=y        
 
 # ======================
-# 内存管理优化 (8GB内存高性能配置)
+# 内存管理优化（8GB低开销）
 # ======================
 CONFIG_SLUB=y
 CONFIG_SLUB_CPU_PARTIAL=y
-CONFIG_SLUB_DEBUG=n
-CONFIG_PAGE_POOL=y
-CONFIG_PAGE_POOL_STATS=n
-CONFIG_NET_MM=y
-CONFIG_COMPACTION=y
+CONFIG_PAGE_POOL=y                
 CONFIG_TRANSPARENT_HUGEPAGE=y
-CONFIG_TRANSPARENT_HUGEPAGE_ALWAYS=n
-CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
-CONFIG_ZSWAP=n  # 关闭压缩交换以减少CPU开销
+CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y 
 
 # ======================
-# 网络协议栈优化 (低延迟高性能)
+# 网络协议栈高性能配置
 # ======================
 CONFIG_TCP_CONG_BBR=y
-CONFIG_TCP_CONG_BBR2=y
-CONFIG_DEFAULT_TCP_CONG="bbr"
-CONFIG_IPV6_ROUTER_PREF=y
+CONFIG_DEFAULT_TCP_CONG="bbr"     
 CONFIG_NET_SCH_DEFAULT=y
-CONFIG_DEFAULT_FQ_CODEL=y
+CONFIG_DEFAULT_FQ_CODEL=y         
 CONFIG_TCP_FASTOPEN=y
-CONFIG_TCP_FASTOPEN_KEY=y
-CONFIG_TCP_AO=y
-CONFIG_PACKET=y
-CONFIG_NET_INGRESS=y
-CONFIG_NET_EGRESS=y
-CONFIG_XFRM_OFFLOAD=y
-CONFIG_INET_DIAG=y
-CONFIG_INET_TCP_DIAG=y
-CONFIG_INET_UDP_DIAG=y
-CONFIG_SYN_COOKIES=y
-CONFIG_UDP_GRO=y
-CONFIG_TCP_MD5SIG=y
-CONFIG_IPV6_SEG6_LWTUNNEL=y
+CONFIG_PACKET=y                  
+CONFIG_INET_DIAG=y                
+CONFIG_SYN_COOKIES=y              
+CONFIG_UDP_GRO=y                  
 CONFIG_NET_SCH_FQ_CODEL=y
-CONFIG_NET_SCH_CAKE=y
-CONFIG_NET_SCH_FQ=y
+CONFIG_NET_SCH_CAKE=y             
 
 # ======================
-# BPF与XDP配置 (零拷贝高性能网络)
+# BPF/XDP零拷贝网络
 # ======================
 CONFIG_BPF=y
 CONFIG_BPF_SYSCALL=y
 CONFIG_BPF_JIT=y
-CONFIG_BPF_JIT_DEFAULT_ON=y
-CONFIG_BPF_STREAM_PARSER=y
+CONFIG_BPF_JIT_DEFAULT_ON=y      
 CONFIG_NET_CLS_BPF=y
 CONFIG_NET_ACT_BPF=y
-CONFIG_NETFILTER_XT_MATCH_BPF=y
 CONFIG_XDP_SOCKETS=y
-CONFIG_NET_XDP=y
-CONFIG_KERNEL_DEBUG_INFO_BTF=y
-CONFIG_KERNEL_CGROUPS=y
-CONFIG_KERNEL_CGROUP_BPF=y
-CONFIG_BPF_TOOLCHAIN_HOST=y
 CONFIG_KERNEL_XDP_SOCKETS=y
-CONFIG_LWTUNNEL_BPF=y
-CONFIG_NET_SOCK_MSG=y
-CONFIG_NET_SOCK_OPS=y
-CONFIG_XDP_SOCKETS_DIAG=y
-CONFIG_BPF_LSM=y
-CONFIG_IGC_XDP=y
-CONFIG_NET_VENDOR_INTEL=y
-CONFIG_NF_FLOW_TABLE_INET=y
-CONFIG_NF_FLOW_TABLE_IPV4=y
-CONFIG_NF_FLOW_TABLE_IPV6=y
+CONFIG_IGC_XDP=y                 
 
 # ======================
-# Netfilter与NAT配置 (硬件卸载优化)
+# Netfilter/NAT硬件卸载
 # ======================
 CONFIG_NETFILTER=y
-CONFIG_NETFILTER_ADVANCED=y
 CONFIG_NF_CONNTRACK=y
 CONFIG_NF_CONNTRACK_IPV4=y
-CONFIG_NF_CONNTRACK_IPV6=y
-CONFIG_NF_DEFRAG_IPV4=y
-CONFIG_NF_DEFRAG_IPV6=y
 CONFIG_NF_NAT=y
-CONFIG_NF_NAT_IPV4=y
-CONFIG_NF_NAT_IPV6=y
 CONFIG_NF_NAT_MASQUERADE_IPV4=y
-CONFIG_NF_NAT_MASQUERADE_IPV6=y
-CONFIG_NF_NAT_FULLCONE=y
 CONFIG_NF_TABLES=y
-CONFIG_NF_TABLES_SET=y
-CONFIG_NF_TABLES_INET=y
-CONFIG_NF_TABLES_IPV4=y
-CONFIG_NF_TABLES_IPV6=y
-CONFIG_NF_TABLES_NETDEV=y
+CONFIG_NF_TABLES_NETDEV=y        
 CONFIG_NFT_NAT=y
 CONFIG_NFT_MASQ=y
-CONFIG_NFT_REDIR=y
-CONFIG_NFT_REJECT=y
-CONFIG_NFT_REJECT_INET=y
-CONFIG_NETFILTER_FLOW_OFFLOAD=y
-CONFIG_NETFILTER_XT_TARGET_FLOWOFFLOAD=y
-CONFIG_NETFILTER_XT_TARGET_HARDWARE_OFFLOAD=y
-CONFIG_NFT_SYNPROXY=y
+CONFIG_NETFILTER_FLOW_OFFLOAD=y  
 CONFIG_NF_FLOW_TABLE=y
-CONFIG_NF_FLOW_TABLE_HW=n
-CONFIG_NF_FLOW=y
-CONFIG_NFT_FLOW_OFFLOAD=y
-CONFIG_NF_CONNTRACK_EVENTS=y
-CONFIG_NF_CONNTRACK_PROCFS=y
-CONFIG_NF_CT_NETLINK=y
-CONFIG_NF_CT_NETLINK_TIMEOUT=y
-CONFIG_NF_CONNTRACK_TIMEOUT=y
-CONFIG_NF_CONNTRACK_ACCT=y
 
 # ======================
-# 内核模块配置 (精简优化)
+# 必要内核模块（精简版）
 # ======================
-CONFIG_PACKAGE_kmod-br-netfilter=y
-CONFIG_PACKAGE_kmod-sched-bpf=y
-CONFIG_PACKAGE_kmod-sched-cake=y
-CONFIG_PACKAGE_kmod-sched=y
-CONFIG_PACKAGE_kmod-tcp-bbr=y
-CONFIG_PACKAGE_kmod-sched-core=y
-CONFIG_PACKAGE_kmod-sched-connmark=y
-CONFIG_PACKAGE_kmod-ifb=y
+CONFIG_PACKAGE_kmod-igc=y          
 CONFIG_PACKAGE_kmod-nft-core=y
-CONFIG_PACKAGE_kmod-nft-nat=y
 CONFIG_PACKAGE_kmod-nft-netdev=y
 CONFIG_PACKAGE_kmod-nft-offload=y
 CONFIG_PACKAGE_kmod-nf-conntrack=y
-CONFIG_PACKAGE_kmod-nf-conntrack6=y
 CONFIG_PACKAGE_kmod-nf-nat=y
-CONFIG_PACKAGE_kmod-nf-nat6=y
-CONFIG_PACKAGE_kmod-nf-flow=y
-CONFIG_PACKAGE_kmod-nf-reject=y
-CONFIG_PACKAGE_kmod-nft-fullcone=y
-CONFIG_PACKAGE_kmod-nft-flow-offload=y
-CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
-CONFIG_PACKAGE_kmod-xdp-sockets-diag=y
+CONFIG_PACKAGE_kmod-xdp-sockets=y
 
 # ======================
-# 用户态工具与库 (性能监控)
+# 用户态工具（性能监控/调优）
 # ======================
+CONFIG_PACKAGE_ethtool=y          
+CONFIG_PACKAGE_irqbalance=y       
 CONFIG_PACKAGE_libnftnl=y
-CONFIG_PACKAGE_ip-full=y
-CONFIG_PACKAGE_ethtool=y
-CONFIG_PACKAGE_irqbalance=y
 CONFIG_PACKAGE_iperf3=y
-CONFIG_PACKAGE_libxdp=y
+CONFIG_PACKAGE_ip-full=y         
+CONFIG_PACKAGE_libxdp=y          
 
 # ======================
 # LuCI应用配置 (精简实用)
@@ -244,26 +144,11 @@ CONFIG_PACKAGE_luci-app-irqbalance=y
 CONFIG_PACKAGE_luci-app-firewall=y
 
 # ======================
-# 调试与追踪配置 (生产环境优化)
+# 生产环境调试精简
 # ======================
-CONFIG_DEBUG_INFO_BTF=y
-CONFIG_DEBUG_INFO=n
-CONFIG_DEBUG_KERNEL=n
-CONFIG_SLUB_DEBUG=n
-CONFIG_PROFILING=n
-CONFIG_BPF_LSM=y
-CONFIG_HAVE_EBPF_JIT=y
-CONFIG_NET_DROP_MONITOR=n  # 关闭网络丢包监控减少开销
-CONFIG_FTRACE=n
-CONFIG_KPROBES=n
-
-# ======================
-# 电源管理优化 (J4125低功耗)
-# ======================
-CONFIG_CPU_IDLE_GOV_MENU=y
-CONFIG_PM=y
-CONFIG_PM_SLEEP=y
-CONFIG_SUSPEND=y
-CONFIG_HIBERNATION=y
-CONFIG_ACPI=y
-CONFIG_ACPI_THERMAL=y
+CONFIG_DEBUG_INFO=n               # 关闭调试符号减少内存
+CONFIG_SLUB_DEBUG=n               # 关闭SLUB调试
+CONFIG_PROFILING=n                # 关闭性能剖析
+CONFIG_NET_DROP_MONITOR=n         # 关闭丢包监控
+CONFIG_FTRACE=n                   # 关闭跟踪框架
+CONFIG_KPROBES=n                  # 关闭探测点
