--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -3,7 +3,7 @@
 # ======================
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
-CONFIG_TARGET_GENERIC=y
+CONFIG_TARGET_x86_64_DEVICE_generic=y
 CONFIG_TARGET_KERNEL_PARTSIZE=32
 CONFIG_TARGET_ROOTFS_PARTSIZE=944
 CONFIG_GRUB_EFI_IMAGES=y
