--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -73,8 +73,7 @@ CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
 # ======================
 # 网络协议栈高性能配置
 # ======================
-CONFIG_TCP_CONG_BBR=y
-CONFIG_DEFAULT_TCP_CONG="bbr"     
+CONFIG_TCP_CONG_BBR3=y    
 CONFIG_NET_SCH_DEFAULT=y
 CONFIG_DEFAULT_FQ_CODEL=y         
 CONFIG_TCP_FASTOPEN=y
@@ -116,7 +115,7 @@ CONFIG_NF_FLOW_TABLE=y
 # ======================
 # 必要内核模块（精简版）
 # ======================
-CONFIG_PACKAGE_kmod-igc=y          
+CONFIG_PACKAGE_kmod-tcp-bbr=y     
 CONFIG_PACKAGE_kmod-nft-core=y
 CONFIG_PACKAGE_kmod-nft-netdev=y
 CONFIG_PACKAGE_kmod-nft-offload=y
