更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -41,7 +41,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 CONFIG_SCHED_MC=y
 CONFIG_SCHED_SMT=y
 # +++ 新增：抢占模式优化，降低延迟 +++
-CONFIG_PREEMPT_VOLUNTARY=y
+CONFIG_PREEMPT_VOLUNTARY=n
 CONFIG_PREEMPT=y
 # +++ 新增：定时器频率提升，改善响应性 +++
 CONFIG_HZ=1000
@@ -59,14 +59,15 @@ CONFIG_IGC_TX_NAPI=y
 CONFIG_IGC_GRO=y
 CONFIG_IGC_GSO=y
 CONFIG_IGC_TSO=y
-CONFIG_IGC_DIM=y                  
+CONFIG_IGC_DIM=y
+CONFIG_IGC_XDP=y                 
 CONFIG_IRQ_AFFINITY_HINT=y       
 CONFIG_GENERIC_IRQ_IPI=y
 CONFIG_IRQ_DOMAIN_HIERARCHY=y
 CONFIG_XPS=y                     
 CONFIG_RFS_ACCEL=y              
-CONFIG_NET_RX_BUSY_POLL=y        
-# +++ 新增：Intel微码更新支持 +++
+CONFIG_NET_RX_BUSY_POLL=y
+CONFIG_NET_RX_BUSY_POLL_DEFAULT=200        
 CONFIG_MICROCODE_INTEL=y
 CONFIG_MICROCODE_LATE_LOADING=y
 
@@ -96,14 +97,14 @@ CONFIG_INET_DIAG=y
 CONFIG_SYN_COOKIES=y              
 CONFIG_UDP_GRO=y                  
 CONFIG_NET_SCH_FQ_CODEL=y
-CONFIG_NET_SCH_CAKE=y             
-# +++ 优化：TCP缓冲区调优，提升吞吐量 +++
+CONFIG_NET_SCH_CAKE=n
+CONFIG_NET_SCH_FQ=y
+CONFIG_XDP_SOCKETS=y
+CONFIG_TCP_NOTSENT_LOWAT=16384           
 CONFIG_TCP_MD5SIG=y
 CONFIG_TCP_AO=y
 CONFIG_INET_ESP=y
-# +++ 优化：减少网络栈处理延迟 +++
-CONFIG_NET_RX_BUSY_POLL_DEFAULT=200
-CONFIG_NET_SCH_MQPRIO=y
+CONFIG_NET_SCH_MQPRIO=n
 
 # ======================
 # Netfilter/NAT硬件卸载
@@ -119,7 +120,6 @@ CONFIG_NFT_NAT=y
 CONFIG_NFT_MASQ=y
 CONFIG_NETFILTER_FLOW_OFFLOAD=y  
 CONFIG_NF_FLOW_TABLE=y
-# +++ 优化：连接跟踪表大小调优 +++
 CONFIG_NF_CONNTRACK_EVENTS=y
 CONFIG_NF_CONNTRACK_TIMEOUT=y
 
