更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -30,8 +30,6 @@ CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld"
 # ======================
 CONFIG_64BIT=y
 CONFIG_X86_64=y
-CONFIG_RETPOLINE=y
-CONFIG_IOMMU_SUPPORT=y
 CONFIG_PCI=y
 CONFIG_PCI_MSI=y
 CONFIG_HIGH_RES_TIMERS=y
@@ -40,10 +38,8 @@ CONFIG_MTRR=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 CONFIG_SCHED_MC=y
 CONFIG_SCHED_SMT=y
-# +++ 新增：抢占模式优化，降低延迟 +++
 CONFIG_PREEMPT_VOLUNTARY=n
 CONFIG_PREEMPT=y
-# +++ 新增：定时器频率提升，改善响应性 +++
 CONFIG_HZ=1000
 CONFIG_HZ_1000=y
 
@@ -89,8 +85,7 @@ CONFIG_TCP_CONG_BBR3=y
 CONFIG_NET_SCH_DEFAULT=y
 CONFIG_DEFAULT_FQ_CODEL=y         
 CONFIG_TCP_FASTOPEN=y
-CONFIG_PACKET=y                  
-CONFIG_INET_DIAG=y                
+CONFIG_PACKET=y                
 CONFIG_SYN_COOKIES=y              
 CONFIG_UDP_GRO=y                  
 CONFIG_NET_SCH_FQ_CODEL=y
@@ -98,10 +93,9 @@ CONFIG_NET_SCH_CAKE=n
 CONFIG_NET_SCH_FQ=y
 CONFIG_XDP_SOCKETS=y
 CONFIG_TCP_NOTSENT_LOWAT=16384           
-CONFIG_TCP_MD5SIG=y
-CONFIG_TCP_AO=y
-CONFIG_INET_ESP=y
 CONFIG_NET_SCH_MQPRIO=n
+CONFIG_IP_ADVANCED_ROUTER=y  # 高级路由功能
+CONFIG_IP_MULTIPLE_TABLES=y  # 策略路由
 
 # ======================
 # Netfilter/NAT硬件卸载
@@ -129,6 +123,8 @@ CONFIG_PACKAGE_kmod-nft-netdev=y
 CONFIG_PACKAGE_kmod-nft-offload=y
 CONFIG_PACKAGE_kmod-nf-conntrack=y
 CONFIG_PACKAGE_kmod-nf-nat=y
+CONFIG_PACKAGE_kmod-nf-nat6=y          
+CONFIG_PACKAGE_kmod-nf-flow-table=y
 
 # ======================
 # 用户态工具（性能监控/调优）
