更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -34,7 +34,6 @@ CONFIG_PCI=y
 CONFIG_PCI_MSI=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_SOFTIRQ_ON_OWN_STACK=y
-CONFIG_MTRR=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 CONFIG_SCHED_MC=y
 CONFIG_SCHED_SMT=y
@@ -55,17 +54,19 @@ CONFIG_IGC_TX_NAPI=y
 CONFIG_IGC_GRO=y
 CONFIG_IGC_GSO=y
 CONFIG_IGC_TSO=y
-CONFIG_IGC_DIM=y
-CONFIG_IGC_XDP=y                 
+CONFIG_IGC_DIM=y          
 CONFIG_IRQ_AFFINITY_HINT=y       
 CONFIG_GENERIC_IRQ_IPI=y
 CONFIG_IRQ_DOMAIN_HIERARCHY=y
-CONFIG_XPS=y                     
+CONFIG_IRQ_FORCED_THREADING=y   
+CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
+CONFIG_IRQ_DOMAIN=y
+CONFIG_XPS=y 
+CONFIG_RPS=y                    
+CONFIG_RFS=y                        
 CONFIG_RFS_ACCEL=y              
 CONFIG_NET_RX_BUSY_POLL=y
-CONFIG_NET_RX_BUSY_POLL_DEFAULT=200        
-CONFIG_MICROCODE_INTEL=y
-CONFIG_MICROCODE_LATE_LOADING=y
+CONFIG_NET_RX_BUSY_POLL_DEFAULT=200
 
 # ======================
 # 内存管理优化（8GB低开销）
