--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -147,6 +147,7 @@ CONFIG_BPF_KPROBE_OVERRIDE=y
 # XDP完整配置
 # ======================
 CONFIG_XDP_SOCKETS=y
+CONFIG_KERNEL_XDP_SOCKETS=y
 CONFIG_XDP_SOCKETS_DIAG=y
 CONFIG_XSK_UMEM_DEFAULT_BATCH_SIZE=64
 CONFIG_XDP_OFFLOAD=y
@@ -180,6 +181,7 @@ CONFIG_PACKAGE_kmod-xdp-sockets=y
 CONFIG_PACKAGE_kmod-xdp-tools=y
 CONFIG_PACKAGE_kmod-xdp-umem=y
 CONFIG_PACKAGE_kmod-xdp-redirect=y
+CONFIG_PACKAGE_kmod-xdp-sockets-diag=y
 
 # ======================
 # 用户态工具（性能监控/调优）
