更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -54,19 +54,21 @@ CONFIG_IGC_TX_NAPI=y
 CONFIG_IGC_GRO=y
 CONFIG_IGC_GSO=y
 CONFIG_IGC_TSO=y
-CONFIG_IGC_DIM=y          
+CONFIG_IGC_DIM=y
+CONFIG_IGC_RX_POLL=y         
 CONFIG_IRQ_AFFINITY_HINT=y       
 CONFIG_GENERIC_IRQ_IPI=y
 CONFIG_IRQ_DOMAIN_HIERARCHY=y
 CONFIG_IRQ_FORCED_THREADING=y   
 CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
 CONFIG_IRQ_DOMAIN=y
+CONFIG_IRQ_POLL=y
 CONFIG_XPS=y 
 CONFIG_RPS=y                    
 CONFIG_RFS=y                        
 CONFIG_RFS_ACCEL=y              
 CONFIG_NET_RX_BUSY_POLL=y
-CONFIG_NET_RX_BUSY_POLL_DEFAULT=200
+CONFIG_NET_RX_BUSY_POLL_DEFAULT=100
 
 # ======================
 # 内存管理优化（8GB低开销）
@@ -78,11 +80,13 @@ CONFIG_TRANSPARENT_HUGEPAGE=y
 CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y 
 CONFIG_SLUB_DEBUG=n
 CONFIG_SLUB_CPU_PARTIAL_DEFAULT=16
+CONFIG_SLUB_MEMCG_SYSFS_ON=n
+CONFIG_PAGE_POOL_STATS=n
 
 # ======================
 # 网络协议栈高性能配置
 # ======================
-CONFIG_TCP_CONG_BBR3=y    
+CONFIG_TCP_CONG_BBR=y    
 CONFIG_NET_SCH_DEFAULT=y
 CONFIG_DEFAULT_FQ_CODEL=y         
 CONFIG_TCP_FASTOPEN=y
@@ -95,8 +99,12 @@ CONFIG_NET_SCH_FQ=y
 CONFIG_XDP_SOCKETS=y
 CONFIG_TCP_NOTSENT_LOWAT=16384           
 CONFIG_NET_SCH_MQPRIO=n
-CONFIG_IP_ADVANCED_ROUTER=y  # 高级路由功能
-CONFIG_IP_MULTIPLE_TABLES=y  # 策略路由
+CONFIG_IP_ADVANCED_ROUTER=y  
+CONFIG_IP_MULTIPLE_TABLES=y  
+CONFIG_TCP_BPF=n           
+CONFIG_TCP_ZERO_COPY_RECEIVE=y
+CONFIG_NET_SCH_INGRESS=y
+CONFIG_NET_EGRESS=y
 
 # ======================
 # Netfilter/NAT硬件卸载
@@ -175,7 +183,6 @@ CONFIG_PACKAGE_kmod-nf-conntrack=y
 CONFIG_PACKAGE_kmod-nf-nat=y
 CONFIG_PACKAGE_kmod-nf-nat6=y          
 CONFIG_PACKAGE_kmod-nf-flow-table=y
-CONFIG_PACKAGE_kmod-bpf-testmod=y
 CONFIG_PACKAGE_kmod-bpfilter=y
 CONFIG_PACKAGE_kmod-xdp-sockets=y
 CONFIG_PACKAGE_kmod-xdp-tools=y
@@ -185,8 +192,7 @@ CONFIG_PACKAGE_kmod-xdp-sockets-diag=y
 CONFIG_PACKAGE_kmod-sched-bpf=y
 CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-ifb=y
-CONFIG_PACKAGE_kmod-pf-ring=y
-CONFIG_PACKAGE_kmod-sched-cake=y
+
 
 # ======================
 # 用户态工具（性能监控/调优）
